@@ -2,8 +2,6 @@ package uk.gov.hmcts.reform.prl.controllers;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-import org.junit.Assert;
-import org.junit.function.ThrowingRunnable;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -46,16 +44,13 @@ import uk.gov.hmcts.reform.prl.models.common.judicial.JudicialUser;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
 import uk.gov.hmcts.reform.prl.models.documents.Document;
 import uk.gov.hmcts.reform.prl.models.dto.GeneratedDocumentInfo;
-import uk.gov.hmcts.reform.prl.models.dto.ccd.AutomatedHearingResponse;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.DocumentManagementDetails;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.HearingData;
-import uk.gov.hmcts.reform.prl.models.dto.ccd.HearingDataPrePopulatedDynamicLists;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.ManageOrders;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.ReviewDocuments;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.ServeOrderData;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.StandardDirectionOrder;
-import uk.gov.hmcts.reform.prl.models.dto.hearings.Hearings;
 import uk.gov.hmcts.reform.prl.models.user.UserRoles;
 import uk.gov.hmcts.reform.prl.services.AuthorisationService;
 import uk.gov.hmcts.reform.prl.services.DraftAnOrderService;
@@ -67,13 +62,11 @@ import uk.gov.hmcts.reform.prl.services.RoleAssignmentService;
 import uk.gov.hmcts.reform.prl.services.dynamicmultiselectlist.DynamicMultiSelectListService;
 import uk.gov.hmcts.reform.prl.services.hearings.HearingService;
 import uk.gov.hmcts.reform.prl.services.tab.alltabs.AllTabServiceImpl;
-import uk.gov.hmcts.reform.prl.utils.AutomatedHearingTransactionRequestMapper;
 import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 import uk.gov.hmcts.reform.prl.utils.ElementUtils;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -139,8 +132,8 @@ public class EditAndApproveDraftOrderControllerTest {
 
     public static final String DRAFT_ORDER_COLLECTION = "draftOrderCollection";
 
-    public static final String authToken = "Bearer TestAuthToken";
-    public static final String s2sToken = "s2s AuthToken";
+    public static final String AUTH_TOKEN = "Bearer TestAuthToken";
+    public static final String S2S_TOKEN = "s2s AuthToken";
     public static Map<String, Object> clientContext = new HashMap<>();
     private static final String TEST_UUID = "00000000-0000-0000-0000-000000000000";
     private static final String ENCODEDSTRING = "eyJjbGllbnRfY29udGV4dCI6eyJ1c2VyX3Rhc2siOnsidGFza19kYXRhIjp7ImlkIjoiNmI"
@@ -162,27 +155,17 @@ public class EditAndApproveDraftOrderControllerTest {
         + "wMCwibWFqb3JfcHJpb3JpdHkiOjUwMDAsInByaW9yaXR5X2RhdGUiOiIyMDI0LTA4LTE2VDE3OjAwOjAwKzAwMDAifSwiY29tcGxldGVfdGFzayI6dHJ1ZX19fQ==";
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         clientContext.put("test", "test");
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
             .hashToken("testHashToken")
             .build();
-        when(hearingDataService.populateHearingDynamicLists(Mockito.anyString(),Mockito.anyString(),Mockito.any(),Mockito.any()))
-            .thenReturn(HearingDataPrePopulatedDynamicLists.builder().build());
-
-        when(hearingDataService.getHearingDataForOtherOrders(Mockito.any(),Mockito.any(),Mockito.any()))
-            .thenReturn(List.of(Element.<HearingData>builder().build()));
-        when(hearingService.getHearings(Mockito.anyString(),Mockito.anyString())).thenReturn(Hearings.hearingsWith().build());
-        when(draftAnOrderService.getSelectedDraftOrderDetails(Mockito.any(), Mockito.any(),
-                                                              Mockito.anyString(),
-                                                              Mockito.anyString()
-        )).thenReturn(DraftOrder.builder().build());
     }
 
     @Test
-    public void shouldGenerateDraftOrderDropdown() {
+    void shouldGenerateDraftOrderDropdown() {
         PartyDetails partyDetails = PartyDetails.builder().firstName("xyz")
             .solicitorOrg(Organisation.builder().organisationName("test").build())
             .build();
@@ -220,9 +203,8 @@ public class EditAndApproveDraftOrderControllerTest {
             DraftOrder::getLabelForOrdersDynamicList
         ));
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
@@ -230,22 +212,19 @@ public class EditAndApproveDraftOrderControllerTest {
 
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(draftAnOrderService.getDraftOrderDynamicList(caseData, Event.EDIT_AND_APPROVE_ORDER.getId(), authToken)).thenReturn(caseDataMap);
+        when(draftAnOrderService.getDraftOrderDynamicList(caseData, Event.EDIT_AND_APPROVE_ORDER.getId(), AUTH_TOKEN)).thenReturn(caseDataMap);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .generateDraftOrderDropDown(authToken,s2sToken,"clcx", callbackRequest);
-        Assert.assertNotNull(response);
+            .generateDraftOrderDropDown(AUTH_TOKEN,S2S_TOKEN,"clcx", callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void shouldGenerateDraftOrderDropdownNoDraftOrders() {
+    void shouldGenerateDraftOrderDropdownNoDraftOrders() {
 
         PartyDetails partyDetails = PartyDetails.builder().firstName("xyz")
             .solicitorOrg(Organisation.builder().organisationName("test").build())
             .build();
         Element<PartyDetails> applicants = element(partyDetails);
-        Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
-        List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
-        draftOrderCollection.add(draftOrderElement);
         CaseData caseData = CaseData.builder()
             .welshLanguageRequirement(Yes)
             .applicants(List.of(applicants))
@@ -256,16 +235,9 @@ public class EditAndApproveDraftOrderControllerTest {
             .state(State.AWAITING_SUBMISSION_TO_HMCTS)
             .build();
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
-        Map<String, Object> caseDataMap = new HashMap<>();
-        caseDataMap.put("draftOrdersDynamicList", ElementUtils.asDynamicList(
-            draftOrderCollection,
-            null,
-            DraftOrder::getLabelForOrdersDynamicList
-        ));
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
@@ -273,14 +245,13 @@ public class EditAndApproveDraftOrderControllerTest {
 
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(draftAnOrderService.getDraftOrderDynamicList(caseData, Event.EDIT_AND_APPROVE_ORDER.getId(), authToken)).thenReturn(caseDataMap);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .generateDraftOrderDropDown(authToken,s2sToken,"clcx",callbackRequest);
-        Assert.assertNotNull(response);
+            .generateDraftOrderDropDown(AUTH_TOKEN,S2S_TOKEN,"clcx",callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void shouldPopulateJudgeOrAdminDraftOrder() {
+    void shouldPopulateJudgeOrAdminDraftOrder() {
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
         draftOrderCollection.add(draftOrderElement);
@@ -307,30 +278,21 @@ public class EditAndApproveDraftOrderControllerTest {
             .build();
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        Map<String, Object> caseDataMap = new HashMap<>();
-        caseDataMap.put("draftOrdersDynamicList", ElementUtils.asDynamicList(
-            draftOrderCollection,
-            null,
-            DraftOrder::getLabelForOrdersDynamicList
-        ));
-
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
             .build();
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(draftAnOrderService.getDraftOrderDynamicList(caseData, Event.EDIT_AND_APPROVE_ORDER.getId(), authToken)).thenReturn(caseDataMap);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .populateJudgeOrAdminDraftOrder(authToken,s2sToken,"clcx", callbackRequest);
-        Assert.assertNotNull(response);
+            .populateJudgeOrAdminDraftOrder(AUTH_TOKEN,S2S_TOKEN,"clcx", callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void shouldPrepareDraftOrderCollectionWithAdminEditAndApprove() {
+    void shouldPrepareDraftOrderCollectionWithAdminEditAndApprove() {
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
         draftOrderCollection.add(draftOrderElement);
@@ -360,35 +322,22 @@ public class EditAndApproveDraftOrderControllerTest {
             .build();
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        Map<String, Object> caseDataMap = new HashMap<>();
-        caseDataMap.put("draftOrdersDynamicList", ElementUtils.asDynamicList(
-            draftOrderCollection,
-            null,
-            DraftOrder::getLabelForOrdersDynamicList
-        ));
-
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("adminEditAndApproveAnOrder")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
             .build();
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
-        when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(draftAnOrderService.getDraftOrderDynamicList(caseData, Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId(), authToken)).thenReturn(caseDataMap);
-        when(dynamicMultiSelectListService
-                 .getOrdersAsDynamicMultiSelectList(caseData))
-            .thenReturn(DynamicMultiSelectList.builder().build());
 
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .prepareDraftOrderCollection(authToken,s2sToken,PrlAppsConstants.ENGLISH,callbackRequest);
-        Assert.assertNotNull(response);
+            .prepareDraftOrderCollection(AUTH_TOKEN,S2S_TOKEN,PrlAppsConstants.ENGLISH,callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void shouldPrepareDraftOrderCollectionWithOutAdminEditAndApprove() {
+    void shouldPrepareDraftOrderCollectionWithOutAdminEditAndApprove() {
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
         draftOrderCollection.add(draftOrderElement);
@@ -425,24 +374,21 @@ public class EditAndApproveDraftOrderControllerTest {
             DraftOrder::getLabelForOrdersDynamicList
         ));
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("test")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
             .build();
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
-        when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(draftAnOrderService.getDraftOrderDynamicList(caseData,Event.EDIT_AND_APPROVE_ORDER.getId(), authToken)).thenReturn(caseDataMap);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .prepareDraftOrderCollection(authToken,s2sToken,PrlAppsConstants.ENGLISH,callbackRequest);
-        Assert.assertNotNull(response);
+            .prepareDraftOrderCollection(AUTH_TOKEN,S2S_TOKEN,PrlAppsConstants.ENGLISH,callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void shouldPopulateJudgeOrAdminDraftOrderCustomFields() throws Exception {
+    void shouldPopulateJudgeOrAdminDraftOrderCustomFields() throws Exception {
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
         draftOrderCollection.add(draftOrderElement);
@@ -476,17 +422,16 @@ public class EditAndApproveDraftOrderControllerTest {
             DraftOrder::getLabelForOrdersDynamicList
         ));
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("test")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
             .build();
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(draftAnOrderService.getDraftOrderDynamicList(caseData, Event.EDIT_AND_APPROVE_ORDER.getId(), authToken)).thenReturn(caseDataMap);
+        when(draftAnOrderService.getDraftOrderDynamicList(caseData, Event.EDIT_AND_APPROVE_ORDER.getId(), AUTH_TOKEN)).thenReturn(caseDataMap);
         when(draftAnOrderService.getDraftOrderInfo("test", caseData, draftOrderElement.getValue())).thenReturn(caseDataMap);
         when(draftAnOrderService
                  .getSelectedDraftOrderDetails(Mockito.any(), Mockito.any(),
@@ -497,12 +442,12 @@ public class EditAndApproveDraftOrderControllerTest {
                 CreateSelectOrderOptionsEnum.blankOrderOrDirections).build());
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .populateJudgeOrAdminDraftOrderCustomFields(authToken,s2sToken,"clcx", callbackRequest);
-        Assert.assertNotNull(response);
+            .populateJudgeOrAdminDraftOrderCustomFields(AUTH_TOKEN,S2S_TOKEN,"clcx", callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void shouldPopulateJudgeOrAdminDraftOrderCustomFieldsForEditAndReturnedOrder() throws Exception {
+    void shouldPopulateJudgeOrAdminDraftOrderCustomFieldsForEditAndReturnedOrder() throws Exception {
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
         draftOrderCollection.add(draftOrderElement);
@@ -537,33 +482,23 @@ public class EditAndApproveDraftOrderControllerTest {
             DraftOrder::getLabelForOrdersDynamicList
         ));
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("editReturnedOrder")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
             .build();
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(draftAnOrderService.getDraftOrderDynamicList(caseData, Event.EDIT_RETURNED_ORDER.getId(), authToken)).thenReturn(caseDataMap);
-        when(draftAnOrderService.getDraftOrderInfo("test", caseData, draftOrderElement.getValue())).thenReturn(caseDataMap);
-        when(draftAnOrderService
-                 .getSelectedDraftOrderDetails(Mockito.any(), Mockito.any(),
-                                               Mockito.anyString(),
-                                               Mockito.anyString()
-                 ))
-            .thenReturn(DraftOrder.builder().orderType(
-                CreateSelectOrderOptionsEnum.blankOrderOrDirections).build());
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .populateJudgeOrAdminDraftOrderCustomFields(authToken,s2sToken,"clcx", callbackRequest);
-        Assert.assertNotNull(response);
+            .populateJudgeOrAdminDraftOrderCustomFields(AUTH_TOKEN,S2S_TOKEN,"clcx", callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void shouldPopulateJudgeOrAdminDraftOrderCustomFieldsThrowsError() throws Exception {
+    void shouldPopulateJudgeOrAdminDraftOrderCustomFieldsThrowsError() throws Exception {
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
         draftOrderCollection.add(draftOrderElement);
@@ -591,37 +526,23 @@ public class EditAndApproveDraftOrderControllerTest {
                 .build();
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        Map<String, Object> caseDataMap = new HashMap<>();
-        caseDataMap.put("draftOrdersDynamicList", ElementUtils.asDynamicList(
-                draftOrderCollection,
-                null,
-                DraftOrder::getLabelForOrdersDynamicList
-        ));
-
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-                .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
                 .eventId("test")
-                .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+                .caseDetails(CaseDetails.builder()
                         .id(123L)
                         .data(stringObjectMap)
                         .build())
                 .build();
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(draftAnOrderService.getDraftOrderDynamicList(caseData,Event.EDIT_AND_APPROVE_ORDER.getId(), authToken)).thenReturn(caseDataMap);
-        when(draftAnOrderService.getDraftOrderInfo("test", caseData, draftOrderElement.getValue())).thenReturn(caseDataMap);
-        when(draftAnOrderService
-                .getSelectedDraftOrderDetails(Mockito.any(), Mockito.any(), Mockito.anyString(), Mockito.anyString()))
-                .thenReturn(DraftOrder.builder().orderType(
-                        CreateSelectOrderOptionsEnum.blankOrderOrDirections).build());
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-                .populateJudgeOrAdminDraftOrderCustomFields(authToken,s2sToken,"clcx", callbackRequest);
-        Assert.assertNotNull(response);
+                .populateJudgeOrAdminDraftOrderCustomFields(AUTH_TOKEN,S2S_TOKEN,"clcx", callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void shouldPopulateJudgeOrAdminDraftOrderCustomFieldsThrowsErrorBlank() throws Exception {
+    void shouldPopulateJudgeOrAdminDraftOrderCustomFieldsThrowsErrorBlank() throws Exception {
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
         draftOrderCollection.add(draftOrderElement);
@@ -657,30 +578,23 @@ public class EditAndApproveDraftOrderControllerTest {
                 DraftOrder::getLabelForOrdersDynamicList
         ));
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-                .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
                 .eventId("test")
-                .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+                .caseDetails(CaseDetails.builder()
                         .id(123L)
                         .data(stringObjectMap)
                         .build())
                 .build();
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(draftAnOrderService.getDraftOrderDynamicList(caseData,Event.EDIT_AND_APPROVE_ORDER.getId(), authToken)).thenReturn(caseDataMap);
-        when(draftAnOrderService.getDraftOrderInfo("test", caseData, draftOrderElement.getValue())).thenReturn(caseDataMap);
-        when(draftAnOrderService
-                .getSelectedDraftOrderDetails(Mockito.any(), Mockito.any(), Mockito.anyString(), Mockito.anyString()))
-                .thenReturn(DraftOrder.builder().orderType(
-                        CreateSelectOrderOptionsEnum.blankOrderOrDirections).build());
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-                .populateJudgeOrAdminDraftOrderCustomFields(authToken,s2sToken,"clcx", callbackRequest);
-        Assert.assertNotNull(response);
+                .populateJudgeOrAdminDraftOrderCustomFields(AUTH_TOKEN,S2S_TOKEN,"clcx", callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void testNoOrderPopulateJudgeFields() throws Exception {
+    void testNoOrderPopulateJudgeFields() throws Exception {
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
         draftOrderCollection.add(draftOrderElement);
@@ -707,29 +621,24 @@ public class EditAndApproveDraftOrderControllerTest {
             .build();
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        Map<String, Object> caseDataMap = new HashMap<>();
-
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("test")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
             .build();
 
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(draftAnOrderService.getDraftOrderDynamicList(caseData, Event.EDIT_AND_APPROVE_ORDER.getId(), authToken)).thenReturn(caseDataMap);
-        when(draftAnOrderService.getDraftOrderInfo("test", caseData, draftOrderElement.getValue())).thenReturn(caseDataMap);
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .populateJudgeOrAdminDraftOrderCustomFields(authToken,s2sToken,"clcx", callbackRequest);
-        Assert.assertNotNull(response);
+            .populateJudgeOrAdminDraftOrderCustomFields(AUTH_TOKEN,S2S_TOKEN,"clcx", callbackRequest);
+        assertNotNull(response);
     }
 
 
     @Test
-    public void  shouldPopulateCommonFields() {
+    void  shouldPopulateCommonFields() {
         PartyDetails partyDetails = PartyDetails.builder().firstName("xyz")
             .solicitorOrg(Organisation.builder().organisationName("test").build())
             .build();
@@ -775,10 +684,9 @@ public class EditAndApproveDraftOrderControllerTest {
             DraftOrder::getLabelForOrdersDynamicList
         ));
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("test")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
@@ -788,12 +696,12 @@ public class EditAndApproveDraftOrderControllerTest {
         when(draftAnOrderService.populateCommonDraftOrderFields(any(), any(), any(), any())).thenReturn(caseDataMap);
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .populateCommonFields(authToken, s2sToken,"clcx", callbackRequest);
-        Assert.assertNotNull(response);
+            .populateCommonFields(AUTH_TOKEN, S2S_TOKEN,"clcx", callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void  shouldPopulateCommonFieldsWithDoYouWantToEditField() {
+    void  shouldPopulateCommonFieldsWithDoYouWantToEditField() {
         PartyDetails partyDetails = PartyDetails.builder().firstName("xyz")
             .solicitorOrg(Organisation.builder().organisationName("test").build())
             .build();
@@ -840,10 +748,9 @@ public class EditAndApproveDraftOrderControllerTest {
                 DraftOrder::getLabelForOrdersDynamicList
         ));
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-                .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
                 .eventId("test")
-                .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+                .caseDetails(CaseDetails.builder()
                         .id(123L)
                         .data(stringObjectMap)
                         .build())
@@ -853,12 +760,12 @@ public class EditAndApproveDraftOrderControllerTest {
         when(draftAnOrderService.populateCommonDraftOrderFields(any(), any(), any(), any())).thenReturn(caseDataMap);
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-                .populateCommonFields(authToken, s2sToken,"clcx", callbackRequest);
-        Assert.assertNotNull(response);
+                .populateCommonFields(AUTH_TOKEN, S2S_TOKEN,"clcx", callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void  shouldPopulateCommonFieldsWhereJusticesLegalAdvisorIsChosen() {
+    void  shouldPopulateCommonFieldsWhereJusticesLegalAdvisorIsChosen() {
         PartyDetails partyDetails = PartyDetails.builder().firstName("xyz")
             .solicitorOrg(Organisation.builder().organisationName("test").build())
             .build();
@@ -905,10 +812,9 @@ public class EditAndApproveDraftOrderControllerTest {
             DraftOrder::getLabelForOrdersDynamicList
         ));
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("test")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
@@ -917,12 +823,12 @@ public class EditAndApproveDraftOrderControllerTest {
         when(draftAnOrderService.populateCommonDraftOrderFields(any(), any(), any(), any())).thenReturn(caseDataMap);
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .populateCommonFields(authToken, s2sToken,"clcx", callbackRequest);
-        Assert.assertNotNull(response);
+            .populateCommonFields(AUTH_TOKEN, S2S_TOKEN,"clcx", callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void testSaveServeOrderDetails() {
+    void testSaveServeOrderDetails() {
 
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
@@ -962,17 +868,9 @@ public class EditAndApproveDraftOrderControllerTest {
 
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        Map<String, Object> caseDataMap = new HashMap<>();
-        caseDataMap.put("draftOrdersDynamicList", ElementUtils.asDynamicList(
-            draftOrderCollection,
-            null,
-            DraftOrder::getLabelForOrdersDynamicList
-        ));
-
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("adminEditAndApproveAnOrder")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
@@ -981,12 +879,12 @@ public class EditAndApproveDraftOrderControllerTest {
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .saveServeOrderDetails(authToken, s2sToken, "clcx", callbackRequest);
-        Assert.assertNotNull(response);
+            .saveServeOrderDetails(AUTH_TOKEN, S2S_TOKEN, "clcx", callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void testSaveServeOrderDetailsForEditAndApprove() {
+    void testSaveServeOrderDetailsForEditAndApprove() {
 
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().id(UUID.fromString("048a6b7e-e2c5-4e6f-8f81-f4926c59bb74"))
             .value(DraftOrder.builder().otherDetails(OtherDraftOrderDetails.builder().dateCreated(LocalDateTime.now()).build()).build())
@@ -1065,28 +963,24 @@ public class EditAndApproveDraftOrderControllerTest {
             DraftOrder::getLabelForOrdersDynamicList
         ));
 
-        when(manageOrderService.getLoggedInUserType(authToken)).thenReturn(UserRoles.JUDGE.name());
+        when(manageOrderService.getLoggedInUserType(AUTH_TOKEN)).thenReturn(UserRoles.JUDGE.name());
         caseDataMap.put(DRAFT_ORDER_COLLECTION, List.of(Element.builder().build()));
         when(draftAnOrderService.updateDraftOrderCollection(Mockito.any(), Mockito.anyString(), Mockito.anyString(), Mockito.anyString()))
             .thenReturn(caseDataMap);
-        AutomatedHearingResponse automatedHearingResponse = AutomatedHearingResponse.builder().build();
-        when(hearingService.createAutomatedHearing(authToken, AutomatedHearingTransactionRequestMapper
-            .mappingAutomatedHearingTransactionRequest(caseData, HearingData.builder().build()))).thenReturn(automatedHearingResponse);
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("editAndApproveAnOrder")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(new HashMap<>())
                              .build())
             .build();
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .saveServeOrderDetails(authToken, s2sToken, ENCODEDSTRING, callbackRequest);
-        Assert.assertNotNull(response);
+            .saveServeOrderDetails(AUTH_TOKEN, S2S_TOKEN, ENCODEDSTRING, callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void testSaveServeOrderDetailsForEditAndApproveCaseManager() {
+    void testSaveServeOrderDetailsForEditAndApproveCaseManager() {
 
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().id(UUID.fromString("048a6b7e-e2c5-4e6f-8f81-f4926c59bb74"))
             .value(DraftOrder.builder().orderTypeId("test")
@@ -1157,26 +1051,22 @@ public class EditAndApproveDraftOrderControllerTest {
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         when(manageOrderService.setChildOptionsIfOrderAboutAllChildrenYes(any())).thenReturn(caseData);
-        when(manageOrderService.getLoggedInUserType(authToken)).thenReturn(UserRoles.CASEMANAGER.name());
+        when(manageOrderService.getLoggedInUserType(AUTH_TOKEN)).thenReturn(UserRoles.CASEMANAGER.name());
         stringObjectMap.put(DRAFT_ORDER_COLLECTION, draftOrderCollection);
-        AutomatedHearingResponse automatedHearingResponse = AutomatedHearingResponse.builder().build();
-        when(hearingService.createAutomatedHearing(authToken, AutomatedHearingTransactionRequestMapper
-            .mappingAutomatedHearingTransactionRequest(caseData, HearingData.builder().build()))).thenReturn(automatedHearingResponse);
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("editAndApproveAnOrder")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
             .build();
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .saveServeOrderDetails(authToken, s2sToken, ENCODEDSTRING, callbackRequest);
-        Assert.assertNotNull(response);
+            .saveServeOrderDetails(AUTH_TOKEN, S2S_TOKEN, ENCODEDSTRING, callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void testSaveServeOrderDetailsForEditAndReturnedOrder() {
+    void testSaveServeOrderDetailsForEditAndReturnedOrder() {
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().id(UUID.fromString("048a6b7e-e2c5-4e6f-8f81-f4926c59bb74"))
             .value(DraftOrder.builder().orderTypeId("test")
                        .otherDetails(OtherDraftOrderDetails.builder().dateCreated(LocalDateTime.now()).build()).build()).build();
@@ -1227,10 +1117,9 @@ public class EditAndApproveDraftOrderControllerTest {
             DraftOrder::getLabelForOrdersDynamicList
         ));
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("editReturnedOrder")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(caseDataMap)
                              .build())
@@ -1240,12 +1129,12 @@ public class EditAndApproveDraftOrderControllerTest {
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         when(manageOrderService.setChildOptionsIfOrderAboutAllChildrenYes(any())).thenReturn(caseData);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .saveServeOrderDetails(authToken, s2sToken, "clcx", callbackRequest);
-        Assert.assertNotNull(response);
+            .saveServeOrderDetails(AUTH_TOKEN, S2S_TOKEN, "clcx", callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void testSaveServeOrderDetailsUpdateDraftOrders() {
+    void testSaveServeOrderDetailsUpdateDraftOrders() {
 
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
@@ -1285,17 +1174,9 @@ public class EditAndApproveDraftOrderControllerTest {
 
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        Map<String, Object> caseDataMap = new HashMap<>();
-        caseDataMap.put("draftOrdersDynamicList", ElementUtils.asDynamicList(
-            draftOrderCollection,
-            null,
-            DraftOrder::getLabelForOrdersDynamicList
-        ));
-
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("adminEditAndApproveAnOrder")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
@@ -1304,13 +1185,13 @@ public class EditAndApproveDraftOrderControllerTest {
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .saveServeOrderDetails(authToken, s2sToken, "clcx", callbackRequest);
-        Assert.assertNotNull(response);
+            .saveServeOrderDetails(AUTH_TOKEN, S2S_TOKEN, "clcx", callbackRequest);
+        assertNotNull(response);
 
     }
 
     @Test
-    public void testPopulateSdoOtherFields() {
+    void testPopulateSdoOtherFields() {
 
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
@@ -1349,17 +1230,9 @@ public class EditAndApproveDraftOrderControllerTest {
 
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        Map<String, Object> caseDataMap = new HashMap<>();
-        caseDataMap.put("draftOrdersDynamicList", ElementUtils.asDynamicList(
-            draftOrderCollection,
-            null,
-            DraftOrder::getLabelForOrdersDynamicList
-        ));
-
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("adminEditAndApproveAnOrder")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
@@ -1368,14 +1241,14 @@ public class EditAndApproveDraftOrderControllerTest {
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .populateSdoOtherFields(authToken, s2sToken,"clcx", callbackRequest);
-        Assert.assertNotNull(response);
+            .populateSdoOtherFields(AUTH_TOKEN, S2S_TOKEN,"clcx", callbackRequest);
+        assertNotNull(response);
 
     }
 
 
     @Test
-    public void testPopulateSdoOtherFields_scenario2() {
+    void testPopulateSdoOtherFields_scenario2() {
 
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
@@ -1409,24 +1282,16 @@ public class EditAndApproveDraftOrderControllerTest {
                                 .whatDoWithOrder(WhatToDoWithOrderEnum.finalizeSaveToServeLater)
                                 .doYouWantToServeOrder(Yes).build())
             .caseTypeOfApplication(C100_CASE_TYPE)
-            .standardDirectionOrder(StandardDirectionOrder.builder().sdoPreamblesList(Arrays.asList(SdoPreamblesEnum.rightToAskCourt))
+            .standardDirectionOrder(StandardDirectionOrder.builder().sdoPreamblesList(List.of(SdoPreamblesEnum.rightToAskCourt))
                                         .editedOrderHasDefaultCaseFields(Yes).build())
             .state(State.AWAITING_SUBMISSION_TO_HMCTS)
             .build();
 
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        Map<String, Object> caseDataMap = new HashMap<>();
-        caseDataMap.put("draftOrdersDynamicList", ElementUtils.asDynamicList(
-            draftOrderCollection,
-            null,
-            DraftOrder::getLabelForOrdersDynamicList
-        ));
-
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("adminEditAndApproveAnOrder")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
@@ -1435,13 +1300,13 @@ public class EditAndApproveDraftOrderControllerTest {
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .populateSdoOtherFields(authToken, s2sToken,"clcx", callbackRequest);
-        Assert.assertNotNull(response);
+            .populateSdoOtherFields(AUTH_TOKEN, S2S_TOKEN,"clcx", callbackRequest);
+        assertNotNull(response);
 
     }
 
     @Test
-    public void testPopulateSdoOtherFieldsStandingOrderSelecFalse() {
+    void testPopulateSdoOtherFieldsStandingOrderSelectFalse() {
 
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
@@ -1490,17 +1355,9 @@ public class EditAndApproveDraftOrderControllerTest {
 
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        Map<String, Object> caseDataMap = new HashMap<>();
-        caseDataMap.put("draftOrdersDynamicList", ElementUtils.asDynamicList(
-            draftOrderCollection,
-            null,
-            DraftOrder::getLabelForOrdersDynamicList
-        ));
-
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("adminEditAndApproveAnOrder")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
@@ -1509,13 +1366,13 @@ public class EditAndApproveDraftOrderControllerTest {
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .populateSdoOtherFields(authToken, s2sToken,"clcx", callbackRequest);
-        Assert.assertNotNull(response);
+            .populateSdoOtherFields(AUTH_TOKEN, S2S_TOKEN,"clcx", callbackRequest);
+        assertNotNull(response);
 
     }
 
     @Test
-    public void testSendEmailNotificationToRecipientsServeOrder() {
+    void testSendEmailNotificationToRecipientsServeOrder() {
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
         draftOrderCollection.add(draftOrderElement);
@@ -1533,28 +1390,26 @@ public class EditAndApproveDraftOrderControllerTest {
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
 
-        when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
-        StartAllTabsUpdateDataContent startAllTabsUpdateDataContent = new StartAllTabsUpdateDataContent(authToken,
+        StartAllTabsUpdateDataContent startAllTabsUpdateDataContent = new StartAllTabsUpdateDataContent(AUTH_TOKEN,
             EventRequestData.builder().build(), StartEventResponse.builder().build(), stringObjectMap, caseData, null);
         when(allTabService.getStartAllTabsUpdate(anyString())).thenReturn(startAllTabsUpdateDataContent);
         when(allTabService.submitAllTabsUpdate(anyString(), anyString(), any(), any(), any())).thenReturn(CaseDetails.builder().build());
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
+            .caseDetails(CaseDetails.builder()
                 .id(123L)
                 .data(stringObjectMap)
                 .build())
             .build();
 
-        editAndApproveDraftOrderController.sendEmailNotificationToRecipientsServeOrder(authToken, s2sToken, callbackRequest);
+        editAndApproveDraftOrderController.sendEmailNotificationToRecipientsServeOrder(AUTH_TOKEN, S2S_TOKEN, callbackRequest);
         verify(manageOrderEmailService, times(1))
             .sendEmailWhenOrderIsServed("Bearer TestAuthToken", caseData, stringObjectMap);
     }
 
     @Test
-    public void testEditAndServeOrderMidEvent() {
+    void testEditAndServeOrderMidEvent() {
         final String authorisation = "Bearer someAuthorisationToken";
 
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
@@ -1604,33 +1459,24 @@ public class EditAndApproveDraftOrderControllerTest {
 
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        Map<String, Object> caseDataMap = new HashMap<>();
-        caseDataMap.put("draftOrdersDynamicList", ElementUtils.asDynamicList(
-            draftOrderCollection,
-            null,
-            DraftOrder::getLabelForOrdersDynamicList
-        ));
-
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId("adminEditAndApproveAnOrder")
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
             .build();
 
-        when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         when(manageOrderService.serveOrderMidEvent(callbackRequest)).thenReturn(stringObjectMap);
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
 
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .editAndServeOrderMidEvent(authorisation, s2sToken, callbackRequest);
-        Assert.assertNotNull(response);
+            .editAndServeOrderMidEvent(authorisation, S2S_TOKEN, callbackRequest);
+        assertNotNull(response);
     }
 
     @Test
-    public void testExceptionForGenerateDraftOrderDropDown() {
+    void testExceptionForGenerateDraftOrderDropDown() {
 
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
@@ -1647,114 +1493,23 @@ public class EditAndApproveDraftOrderControllerTest {
             .build();
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
             .build();
-        Mockito.when(authorisationService.isAuthorized(authToken, s2sToken)).thenReturn(false);
-        assertExpectedException(() -> editAndApproveDraftOrderController
-            .generateDraftOrderDropDown(authToken, s2sToken,"clcx", callbackRequest), RuntimeException.class, "Invalid Client");
-    }
+        Mockito.when(authorisationService.isAuthorized(AUTH_TOKEN, S2S_TOKEN)).thenReturn(false);
 
-    @Test
-    public void testExceptionForPopulateJudgeOrAdminDraftOrder() {
-
-        Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
-        List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
-        draftOrderCollection.add(draftOrderElement);
-        CaseData caseData = CaseData.builder()
-            .manageOrders(ManageOrders.builder().markedToServeEmailNotification(Yes).build())
-            .welshLanguageRequirement(Yes)
-            .welshLanguageRequirementApplication(english)
-            .languageRequirementApplicationNeedWelsh(Yes)
-            .id(123L)
-            .draftOrderCollection(draftOrderCollection)
-            .caseTypeOfApplication(C100_CASE_TYPE)
-            .state(State.AWAITING_SUBMISSION_TO_HMCTS)
-            .build();
-        Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
-
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
-                             .id(123L)
-                             .data(stringObjectMap)
-                             .build())
-            .build();
-        Mockito.when(authorisationService.isAuthorized(authToken, s2sToken)).thenReturn(false);
-        assertExpectedException(() -> editAndApproveDraftOrderController
-            .populateJudgeOrAdminDraftOrder(authToken,s2sToken,"clientContext", callbackRequest), RuntimeException.class, "Invalid Client");
-    }
-
-    @Test
-    public void testExceptionForPrepareDraftOrderCollection() {
-
-        Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
-        List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
-        draftOrderCollection.add(draftOrderElement);
-        CaseData caseData = CaseData.builder()
-            .manageOrders(ManageOrders.builder().markedToServeEmailNotification(Yes).build())
-            .welshLanguageRequirement(Yes)
-            .welshLanguageRequirementApplication(english)
-            .languageRequirementApplicationNeedWelsh(Yes)
-            .id(123L)
-            .draftOrderCollection(draftOrderCollection)
-            .caseTypeOfApplication(C100_CASE_TYPE)
-            .state(State.AWAITING_SUBMISSION_TO_HMCTS)
-            .build();
-        Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
-
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
-                             .id(123L)
-                             .data(stringObjectMap)
-                             .build())
-            .build();
-        Mockito.when(authorisationService.isAuthorized(authToken, s2sToken)).thenReturn(false);
-        assertExpectedException(() -> editAndApproveDraftOrderController
-            .prepareDraftOrderCollection(authToken, s2sToken, PrlAppsConstants.ENGLISH,callbackRequest), RuntimeException.class, "Invalid Client");
-    }
-
-    @Test
-    public void testExceptionForSaveServeOrderDetails() {
-
-        Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
-        List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
-        draftOrderCollection.add(draftOrderElement);
-        CaseData caseData = CaseData.builder()
-            .manageOrders(ManageOrders.builder().markedToServeEmailNotification(Yes).build())
-            .welshLanguageRequirement(Yes)
-            .welshLanguageRequirementApplication(english)
-            .languageRequirementApplicationNeedWelsh(Yes)
-            .id(123L)
-            .draftOrderCollection(draftOrderCollection)
-            .caseTypeOfApplication(C100_CASE_TYPE)
-            .state(State.AWAITING_SUBMISSION_TO_HMCTS)
-            .build();
-        Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
-
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
-                             .id(123L)
-                             .data(stringObjectMap)
-                             .build())
-            .build();
-        Mockito.when(authorisationService.isAuthorized(authToken, s2sToken)).thenReturn(false);
-        assertExpectedException(
-            () -> editAndApproveDraftOrderController
-                .saveServeOrderDetails(authToken, s2sToken, "clcx", callbackRequest),
-            RuntimeException.class,
-            "Invalid Client"
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> editAndApproveDraftOrderController
+            .generateDraftOrderDropDown(AUTH_TOKEN, S2S_TOKEN,"clcx", callbackRequest)
         );
+
+        assertEquals("Invalid Client", ex.getMessage());
     }
 
     @Test
-    public void testExceptionForSendEmailNotificationToRecipientsServeOrder() {
+    void testExceptionForPopulateJudgeOrAdminDraftOrder() {
 
         Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
         List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
@@ -1771,25 +1526,126 @@ public class EditAndApproveDraftOrderControllerTest {
             .build();
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
             .build();
-        Mockito.when(authorisationService.isAuthorized(authToken, s2sToken)).thenReturn(false);
-        assertExpectedException(() -> editAndApproveDraftOrderController
-            .sendEmailNotificationToRecipientsServeOrder(authToken, s2sToken, callbackRequest), RuntimeException.class, "Invalid Client");
+        Mockito.when(authorisationService.isAuthorized(AUTH_TOKEN, S2S_TOKEN)).thenReturn(false);
+
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> editAndApproveDraftOrderController
+            .populateJudgeOrAdminDraftOrder(AUTH_TOKEN,S2S_TOKEN,"clientContext", callbackRequest)
+        );
+
+        assertEquals("Invalid Client", ex.getMessage());
     }
 
     @Test
-    public void testHandleEditAndApproveSubmitted() {
+    void testExceptionForPrepareDraftOrderCollection() {
+
+        Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
+        List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
+        draftOrderCollection.add(draftOrderElement);
+        CaseData caseData = CaseData.builder()
+            .manageOrders(ManageOrders.builder().markedToServeEmailNotification(Yes).build())
+            .welshLanguageRequirement(Yes)
+            .welshLanguageRequirementApplication(english)
+            .languageRequirementApplicationNeedWelsh(Yes)
+            .id(123L)
+            .draftOrderCollection(draftOrderCollection)
+            .caseTypeOfApplication(C100_CASE_TYPE)
+            .state(State.AWAITING_SUBMISSION_TO_HMCTS)
+            .build();
+        Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
+
+        CallbackRequest callbackRequest = CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
+            .caseDetails(CaseDetails.builder()
+                             .id(123L)
+                             .data(stringObjectMap)
+                             .build())
+            .build();
+        Mockito.when(authorisationService.isAuthorized(AUTH_TOKEN, S2S_TOKEN)).thenReturn(false);
+
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> editAndApproveDraftOrderController
+            .prepareDraftOrderCollection(AUTH_TOKEN, S2S_TOKEN, PrlAppsConstants.ENGLISH,callbackRequest)
+        );
+
+        assertEquals("Invalid Client", ex.getMessage());
+    }
+
+    @Test
+    void testExceptionForSaveServeOrderDetails() {
+
+        Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
+        List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
+        draftOrderCollection.add(draftOrderElement);
+        CaseData caseData = CaseData.builder()
+            .manageOrders(ManageOrders.builder().markedToServeEmailNotification(Yes).build())
+            .welshLanguageRequirement(Yes)
+            .welshLanguageRequirementApplication(english)
+            .languageRequirementApplicationNeedWelsh(Yes)
+            .id(123L)
+            .draftOrderCollection(draftOrderCollection)
+            .caseTypeOfApplication(C100_CASE_TYPE)
+            .state(State.AWAITING_SUBMISSION_TO_HMCTS)
+            .build();
+        Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
+
+        CallbackRequest callbackRequest = CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
+            .caseDetails(CaseDetails.builder()
+                             .id(123L)
+                             .data(stringObjectMap)
+                             .build())
+            .build();
+        Mockito.when(authorisationService.isAuthorized(AUTH_TOKEN, S2S_TOKEN)).thenReturn(false);
+
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> editAndApproveDraftOrderController
+            .saveServeOrderDetails(AUTH_TOKEN, S2S_TOKEN, "clcx", callbackRequest)
+        );
+
+        assertEquals("Invalid Client", ex.getMessage());
+    }
+
+    @Test
+    void testExceptionForSendEmailNotificationToRecipientsServeOrder() {
+
+        Element<DraftOrder> draftOrderElement = Element.<DraftOrder>builder().build();
+        List<Element<DraftOrder>> draftOrderCollection = new ArrayList<>();
+        draftOrderCollection.add(draftOrderElement);
+        CaseData caseData = CaseData.builder()
+            .manageOrders(ManageOrders.builder().markedToServeEmailNotification(Yes).build())
+            .welshLanguageRequirement(Yes)
+            .welshLanguageRequirementApplication(english)
+            .languageRequirementApplicationNeedWelsh(Yes)
+            .id(123L)
+            .draftOrderCollection(draftOrderCollection)
+            .caseTypeOfApplication(C100_CASE_TYPE)
+            .state(State.AWAITING_SUBMISSION_TO_HMCTS)
+            .build();
+        Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
+
+        CallbackRequest callbackRequest = CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
+            .caseDetails(CaseDetails.builder()
+                             .id(123L)
+                             .data(stringObjectMap)
+                             .build())
+            .build();
+        Mockito.when(authorisationService.isAuthorized(AUTH_TOKEN, S2S_TOKEN)).thenReturn(false);
+
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> editAndApproveDraftOrderController
+            .sendEmailNotificationToRecipientsServeOrder(AUTH_TOKEN, S2S_TOKEN, callbackRequest)
+        );
+
+        assertEquals("Invalid Client", ex.getMessage());
+    }
+
+    @Test
+    void testHandleEditAndApproveSubmitted() {
         Map<String, Object> stringObjectMap = new HashMap<>();
         stringObjectMap.put("whatToDoWithOrderSolicitor", OrderApprovalDecisionsForCourtAdminOrderEnum.editTheOrderAndServe);
-        uk.gov.hmcts.reform.ccd.client.model.CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(12345L)
                              .data(stringObjectMap)
                              .build())
@@ -1803,38 +1659,40 @@ public class EditAndApproveDraftOrderControllerTest {
             .caseTypeOfApplication(C100_CASE_TYPE)
             .build();
         Map<String, Object> caseDetails = caseData.toMap(new ObjectMapper());
-        StartAllTabsUpdateDataContent startAllTabsUpdateDataContent = new StartAllTabsUpdateDataContent(authToken,
+        StartAllTabsUpdateDataContent startAllTabsUpdateDataContent = new StartAllTabsUpdateDataContent(AUTH_TOKEN,
             EventRequestData.builder().build(), StartEventResponse.builder().build(), caseDetails, caseData, null);
         when(allTabService.getStartAllTabsUpdate(anyString())).thenReturn(startAllTabsUpdateDataContent);
 
         ResponseEntity<SubmittedCallbackResponse> callbackResponse = editAndApproveDraftOrderController
-            .handleEditAndApproveSubmitted(authToken,s2sToken,"clcx",callbackRequest);
+            .handleEditAndApproveSubmitted(AUTH_TOKEN,S2S_TOKEN,"clcx",callbackRequest);
         assertNotNull(Objects.requireNonNull(callbackResponse.getBody()).getConfirmationHeader());
     }
 
     @Test
-    public void testHandleEditAndApproveSubmittedByCourtAdmin() {
+    void testHandleEditAndApproveSubmittedByCourtAdmin() {
         Map<String, Object> stringObjectMap = new HashMap<>();
-        uk.gov.hmcts.reform.ccd.client.model.CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(12345L)
                              .data(stringObjectMap)
                              .build())
             .build();
         when(authorisationService.isAuthorized(any(),any())).thenReturn(false);
-        assertExpectedException(() -> editAndApproveDraftOrderController
-            .handleEditAndApproveSubmitted(authToken, s2sToken, "clcx", callbackRequest), RuntimeException.class, "Invalid Client");
+
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> editAndApproveDraftOrderController
+            .handleEditAndApproveSubmitted(AUTH_TOKEN, S2S_TOKEN, "clcx", callbackRequest)
+        );
+
+        assertEquals("Invalid Client", ex.getMessage());
     }
 
     @Test
-    public void testHandleEditAndApproveSubmittedWhenAskLegalRepChosen() {
+    void testHandleEditAndApproveSubmittedWhenAskLegalRepChosen() {
         Map<String, Object> stringObjectMap = new HashMap<>();
 
         stringObjectMap.put("whatToDoWithOrderSolicitor", OrderApprovalDecisionsForSolicitorOrderEnum.askLegalRepToMakeChanges.toString());
-        uk.gov.hmcts.reform.ccd.client.model.CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(12345L)
                              .data(stringObjectMap)
                              .build())
@@ -1859,75 +1717,67 @@ public class EditAndApproveDraftOrderControllerTest {
             .caseTypeOfApplication(C100_CASE_TYPE)
             .build();
         Map<String, Object> caseDetails = caseData.toMap(new ObjectMapper());
-        StartAllTabsUpdateDataContent startAllTabsUpdateDataContent = new StartAllTabsUpdateDataContent(authToken,
+        StartAllTabsUpdateDataContent startAllTabsUpdateDataContent = new StartAllTabsUpdateDataContent(AUTH_TOKEN,
             EventRequestData.builder().build(), StartEventResponse.builder().build(), caseDetails, caseData, null);
         when(allTabService.getStartAllTabsUpdate(anyString())).thenReturn(startAllTabsUpdateDataContent);
 
         ResponseEntity<SubmittedCallbackResponse> callbackResponse = editAndApproveDraftOrderController
-            .handleEditAndApproveSubmitted(authToken,s2sToken,"clcx", callbackRequest);
+            .handleEditAndApproveSubmitted(AUTH_TOKEN,S2S_TOKEN,"clcx", callbackRequest);
         assertNotNull(Objects.requireNonNull(callbackResponse.getBody()).getConfirmationHeader());
     }
 
-    protected <T extends Throwable> void assertExpectedException(ThrowingRunnable methodExpectedToFail, Class<T> expectedThrowableClass,
-                                                                 String expectedMessage) {
-        T exception = assertThrows(expectedThrowableClass, methodExpectedToFail);
-        assertEquals(expectedMessage, exception.getMessage());
-    }
+
 
     @Test
-    public void testExceptionForPopulateJudgeOrAdminDraftOrderCustomFields() {
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+    void testExceptionForPopulateJudgeOrAdminDraftOrderCustomFields() {
+        CallbackRequest callbackRequest = CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .build())
             .build();
-        Mockito.when(authorisationService.isAuthorized(authToken, s2sToken)).thenReturn(false);
-        assertExpectedException(() -> editAndApproveDraftOrderController
-            .populateJudgeOrAdminDraftOrderCustomFields(authToken, s2sToken,"clcx",  callbackRequest), RuntimeException.class, "Invalid Client");
+        Mockito.when(authorisationService.isAuthorized(AUTH_TOKEN, S2S_TOKEN)).thenReturn(false);
+
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> editAndApproveDraftOrderController
+            .populateJudgeOrAdminDraftOrderCustomFields(AUTH_TOKEN, S2S_TOKEN,"clcx",  callbackRequest)
+        );
+
+        assertEquals("Invalid Client", ex.getMessage());
     }
 
     @Test
-    public void testExceptionForPopulateCommonFields() {
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+    void testExceptionForPopulateCommonFields() {
+        CallbackRequest callbackRequest = CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .build())
             .build();
-        Mockito.when(authorisationService.isAuthorized(authToken, s2sToken)).thenReturn(false);
-        assertExpectedException(() -> editAndApproveDraftOrderController
-            .populateCommonFields(authToken, s2sToken,"clcx", callbackRequest), RuntimeException.class, "Invalid Client");
+        Mockito.when(authorisationService.isAuthorized(AUTH_TOKEN, S2S_TOKEN)).thenReturn(false);
+
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> editAndApproveDraftOrderController
+            .populateCommonFields(AUTH_TOKEN, S2S_TOKEN,"clcx", callbackRequest)
+        );
+
+        assertEquals("Invalid Client", ex.getMessage());
     }
 
     @Test
-    public void testExceptionForEditAndServeOrderMidEvent() {
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+    void testExceptionForEditAndServeOrderMidEvent() {
+        CallbackRequest callbackRequest = CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .build())
             .build();
-        Mockito.when(authorisationService.isAuthorized(authToken, s2sToken)).thenReturn(false);
-        assertExpectedException(() -> editAndApproveDraftOrderController
-            .editAndServeOrderMidEvent(authToken, s2sToken, callbackRequest), RuntimeException.class, "Invalid Client");
+        Mockito.when(authorisationService.isAuthorized(AUTH_TOKEN, S2S_TOKEN)).thenReturn(false);
+
+        RuntimeException ex = assertThrows(RuntimeException.class, () ->
+            editAndApproveDraftOrderController.editAndServeOrderMidEvent(AUTH_TOKEN, S2S_TOKEN, callbackRequest)
+        );
+
+        assertEquals("Invalid Client", ex.getMessage());
     }
 
     @Test
-    public void testExceptionForPopulateSdoOtherFields() {
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder().eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
-                             .id(123L)
-                             .build())
-            .build();
-        Mockito.when(authorisationService.isAuthorized(authToken, s2sToken)).thenReturn(false);
-        assertExpectedException(() -> editAndApproveDraftOrderController
-            .editAndServeOrderMidEvent(authToken, s2sToken, callbackRequest), RuntimeException.class, "Invalid Client");
-    }
-
-    @Test
-    public void testNoFieldsPopulateUploadOrder() throws Exception {
+    void testNoFieldsPopulateUploadOrder() throws Exception {
         DraftOrder draftOrder = DraftOrder.builder()
             .isOrderUploadedByJudgeOrAdmin(Yes)
             .build();
@@ -1937,10 +1787,9 @@ public class EditAndApproveDraftOrderControllerTest {
             .build();
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId(Event.EDIT_AND_APPROVE_ORDER.getId())
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
@@ -1954,16 +1803,16 @@ public class EditAndApproveDraftOrderControllerTest {
         )).thenReturn(draftOrder);
 
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .populateJudgeOrAdminDraftOrderCustomFields(authToken,s2sToken,"clcx", callbackRequest);
+            .populateJudgeOrAdminDraftOrderCustomFields(AUTH_TOKEN,S2S_TOKEN,"clcx", callbackRequest);
 
-        Assert.assertNotNull(response);
+        assertNotNull(response);
         Map<String, Object> updatedCaseDataMap = response.getData();
-        Assert.assertNotNull(updatedCaseDataMap.get("draftOrderCollection"));
-        Assert.assertEquals("C100", updatedCaseDataMap.get("caseTypeOfApplication"));
+        assertNotNull(updatedCaseDataMap.get("draftOrderCollection"));
+        assertEquals("C100", updatedCaseDataMap.get("caseTypeOfApplication"));
     }
 
     @Test
-    public void testSkipUploadConditionWhenDraftOrderIsNull() throws Exception {
+    void testSkipUploadConditionWhenDraftOrderIsNull() throws Exception {
         DraftOrder draftOrder = DraftOrder.builder()
             .isOrderUploadedByJudgeOrAdmin(Yes)
             .build();
@@ -1973,10 +1822,9 @@ public class EditAndApproveDraftOrderControllerTest {
             .build();
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId(Event.EDIT_AND_APPROVE_ORDER.getId())
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
@@ -1990,13 +1838,13 @@ public class EditAndApproveDraftOrderControllerTest {
         )).thenReturn(null);
 
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .populateJudgeOrAdminDraftOrderCustomFields(authToken,s2sToken,"clcx", callbackRequest);
+            .populateJudgeOrAdminDraftOrderCustomFields(AUTH_TOKEN,S2S_TOKEN,"clcx", callbackRequest);
 
-        Assert.assertNotNull(response);
+        assertNotNull(response);
     }
 
     @Test
-    public void testPopulateCommonFieldsEditedOrder() {
+    void testPopulateCommonFieldsEditedOrder() {
         PartyDetails partyDetails = PartyDetails.builder().firstName("xyz")
             .solicitorOrg(Organisation.builder().organisationName("test").build())
             .build();
@@ -2014,10 +1862,9 @@ public class EditAndApproveDraftOrderControllerTest {
 
         Map<String, Object> caseDataMap = new HashMap<>();
 
-        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
+        CallbackRequest callbackRequest = CallbackRequest.builder()
             .eventId(Event.ADMIN_EDIT_AND_APPROVE_ORDER.getId())
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .caseDetails(CaseDetails.builder()
                              .id(123L)
                              .data(stringObjectMap)
                              .build())
@@ -2032,11 +1879,11 @@ public class EditAndApproveDraftOrderControllerTest {
         when(draftAnOrderService.populateCommonDraftOrderFields(Mockito.any(), Mockito.any(), Mockito.any(), any())).thenReturn(caseDataMap);
 
         AboutToStartOrSubmitCallbackResponse response = editAndApproveDraftOrderController
-            .populateCommonFields(authToken,s2sToken,"clcx",callbackRequest);
+            .populateCommonFields(AUTH_TOKEN,S2S_TOKEN,"clcx",callbackRequest);
 
-        Assert.assertNotNull(response);
+        assertNotNull(response);
         Map<String, Object> updatedCaseDataMap = response.getData();
-        Assert.assertNotNull(updatedCaseDataMap.get("doYouWantToEditTheOrder"));
-        Assert.assertEquals("Yes", String.valueOf(updatedCaseDataMap.get("doYouWantToEditTheOrder")));
+        assertNotNull(updatedCaseDataMap.get("doYouWantToEditTheOrder"));
+        assertEquals("Yes", String.valueOf(updatedCaseDataMap.get("doYouWantToEditTheOrder")));
     }
 }
