@@ -1,6 +1,5 @@
 package uk.gov.hmcts.reform.prl.mapper.bundle;
 
-import org.junit.Assert;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -26,6 +25,7 @@ import uk.gov.hmcts.reform.prl.models.complextypes.citizen.documents.UploadedDoc
 import uk.gov.hmcts.reform.prl.models.complextypes.managedocuments.ManageDocuments;
 import uk.gov.hmcts.reform.prl.models.documents.Document;
 import uk.gov.hmcts.reform.prl.models.dto.bundle.BundleCreateRequest;
+import uk.gov.hmcts.reform.prl.models.dto.bundle.BundleHearingInfo;
 import uk.gov.hmcts.reform.prl.models.dto.bundle.BundlingInformation;
 import uk.gov.hmcts.reform.prl.models.dto.bundle.BundlingRequestDocument;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
@@ -43,6 +43,7 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static uk.gov.hmcts.reform.prl.constants.ManageDocumentsCategoryConstants.FM5_STATEMENTS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.ANY_OTHER_DOCUMENTS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.APPLICANT_C1A_RESPONSE;
@@ -86,24 +87,27 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.wrapElements;
 
 @ExtendWith(MockitoExtension.class)
-public class BundleCreateRequestMapperTest {
+class BundleCreateRequestMapperTest {
     @InjectMocks
     private BundleCreateRequestMapper bundleCreateRequestMapper;
 
     @Test
-    public void testBundleCreateRequestMapper() {
+    void testBundleCreateRequestMapper() {
         List<FurtherEvidence> furtherEvidences = new ArrayList<>();
         furtherEvidences.add(FurtherEvidence.builder().typeOfDocumentFurtherEvidence(FurtherEvidenceDocumentType.miamCertificate)
-            .documentFurtherEvidence(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("Sample1.pdf").build())
-            .restrictCheckboxFurtherEvidence(new ArrayList<>()).build());
+                                 .documentFurtherEvidence(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                     "Sample1.pdf").build())
+                                 .restrictCheckboxFurtherEvidence(new ArrayList<>()).build());
 
         furtherEvidences.add(FurtherEvidence.builder().typeOfDocumentFurtherEvidence(FurtherEvidenceDocumentType.previousOrders)
-            .documentFurtherEvidence(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("Sample1.pdf").build())
-            .restrictCheckboxFurtherEvidence(new ArrayList<>()).build());
+                                 .documentFurtherEvidence(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                     "Sample1.pdf").build())
+                                 .restrictCheckboxFurtherEvidence(new ArrayList<>()).build());
 
         List<OtherDocuments> otherDocuments = new ArrayList<>();
         otherDocuments.add(OtherDocuments.builder().documentName("Application docu")
-            .documentOther(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("Sample2.pdf").build()).documentTypeOther(
+                               .documentOther(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                   "Sample2.pdf").build()).documentTypeOther(
                 DocTypeOtherDocumentsEnum.applicantStatement).restrictCheckboxOtherDocuments(new ArrayList<>()).build());
 
         List<OrderDetails> orders = new ArrayList<>();
@@ -116,139 +120,180 @@ public class BundleCreateRequestMapperTest {
 
         List<ResponseDocuments> citizenC7uploadedDocs = new ArrayList<>();
         citizenC7uploadedDocs.add(ResponseDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("C7Document.pdf").build()).build());
+                                      .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                          "C7Document.pdf").build()).build());
 
         List<UploadedDocuments> uploadedDocuments = new ArrayList<>();
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("PositionStatement.pdf").build())
-            .documentType(YOUR_POSITION_STATEMENTS).isApplicant("No").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "PositionStatement.pdf").build())
+                                  .documentType(YOUR_POSITION_STATEMENTS).isApplicant("No").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("PositionStatement.pdf").build())
-            .documentType(YOUR_POSITION_STATEMENTS).isApplicant("Yes").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "PositionStatement.pdf").build())
+                                  .documentType(YOUR_POSITION_STATEMENTS).isApplicant("Yes").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("WitnessStatement.pdf").build())
-            .documentType(YOUR_WITNESS_STATEMENTS).isApplicant("Yes").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "WitnessStatement.pdf").build())
+                                  .documentType(YOUR_WITNESS_STATEMENTS).isApplicant("Yes").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("WitnessStatement.pdf").build())
-            .documentType(YOUR_WITNESS_STATEMENTS).isApplicant("No").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "WitnessStatement.pdf").build())
+                                  .documentType(YOUR_WITNESS_STATEMENTS).isApplicant("No").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("LettersFromSchool.pdf").build())
-            .documentType(LETTERS_FROM_SCHOOL).isApplicant("No").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "LettersFromSchool.pdf").build())
+                                  .documentType(LETTERS_FROM_SCHOOL).isApplicant("No").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("LettersFromSchool.pdf").build())
-            .documentType(LETTERS_FROM_SCHOOL).isApplicant("Yes").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "LettersFromSchool.pdf").build())
+                                  .documentType(LETTERS_FROM_SCHOOL).isApplicant("Yes").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("LettersFromSchool.pdf").build())
-            .documentType(EXPERT_REPORTS).isApplicant("No").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "LettersFromSchool.pdf").build())
+                                  .documentType(EXPERT_REPORTS).isApplicant("No").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("CAFCASSReports.pdf").build())
-            .documentType(CAFCASS_REPORTS).isApplicant("No").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "CAFCASSReports.pdf").build())
+                                  .documentType(CAFCASS_REPORTS).isApplicant("No").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("OtherWitnessDocuments.pdf").build())
-            .documentType(OTHER_WITNESS_STATEMENTS).isApplicant("No").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "OtherWitnessDocuments.pdf").build())
+                                  .documentType(OTHER_WITNESS_STATEMENTS).isApplicant("No").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("MedicalRecords.pdf").build())
-            .documentType(MEDICAL_RECORDS).isApplicant("No").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "MedicalRecords.pdf").build())
+                                  .documentType(MEDICAL_RECORDS).isApplicant("No").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("MedicalReports.pdf").build())
-            .documentType(MEDICAL_REPORTS).isApplicant("No").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "MedicalReports.pdf").build())
+                                  .documentType(MEDICAL_REPORTS).isApplicant("No").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("PaternityReports.pdf").build())
-            .documentType(PATERNITY_TEST_REPORTS).isApplicant("No").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "PaternityReports.pdf").build())
+                                  .documentType(PATERNITY_TEST_REPORTS).isApplicant("No").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("DrugAndAlchol.pdf").build())
-            .documentType(DRUG_AND_ALCOHOL_TESTS).isApplicant("No").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "DrugAndAlchol.pdf").build())
+                                  .documentType(DRUG_AND_ALCOHOL_TESTS).isApplicant("No").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("PoliceReports.pdf").build())
-            .documentType(POLICE_REPORTS).isApplicant("No").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "PoliceReports.pdf").build())
+                                  .documentType(POLICE_REPORTS).isApplicant("No").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("MediaScreenshots.pdf").build())
-            .documentType(MAIL_SCREENSHOTS_MEDIA_FILES).isApplicant("No").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "MediaScreenshots.pdf").build())
+                                  .documentType(MAIL_SCREENSHOTS_MEDIA_FILES).isApplicant("No").build());
         uploadedDocuments.add(UploadedDocuments.builder()
-            .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("MediaScreenshots.pdf").build())
-            .documentType(MAIL_SCREENSHOTS_MEDIA_FILES).isApplicant("Yes").build());
+                                  .citizenDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                      "MediaScreenshots.pdf").build())
+                                  .documentType(MAIL_SCREENSHOTS_MEDIA_FILES).isApplicant("Yes").build());
         List<Document> fl401UploadWitnessDocuments = new ArrayList<>();
-        fl401UploadWitnessDocuments.add(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("witnessDoc.pdf").build());
+        fl401UploadWitnessDocuments.add(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+            "witnessDoc.pdf").build());
 
         List<Document> fl401UploadSupportingDocuments = new ArrayList<>();
-        fl401UploadSupportingDocuments.add(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("supportingDoc.pdf")
-            .build());
+        fl401UploadSupportingDocuments.add(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                "supportingDoc.pdf")
+                                               .build());
 
         List<ManageDocuments> otherManageDocuments = new ArrayList<>();
         otherManageDocuments.add(ManageDocuments.builder()
-                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("position.pdf")
+                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                             "position.pdf")
                                                    .build())
-                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem("Position statements"))
+                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem(
+                                             "Position statements"))
                                                              .build())
                                      .documentParty(DocumentPartyEnum.APPLICANT)
-                                    .build());
+                                     .build());
         otherManageDocuments.add(ManageDocuments.builder()
-                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("witness.pdf")
+                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                             "witness.pdf")
                                                    .build())
                                      .documentCategories(DynamicList.builder()
-                                                             .value(DynamicListElement.defaultListItem("Your witness statements")).build())
+                                                             .value(DynamicListElement.defaultListItem(
+                                                                 "Your witness statements")).build())
                                      .documentParty(DocumentPartyEnum.APPLICANT).build());
         otherManageDocuments.add(ManageDocuments.builder()
-                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("otherwitness.pdf")
+                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                             "otherwitness.pdf")
                                                    .build())
                                      .documentCategories(DynamicList.builder()
-                                                             .value(DynamicListElement.defaultListItem("Other witness Statements")).build())
+                                                             .value(DynamicListElement.defaultListItem(
+                                                                 "Other witness Statements")).build())
                                      .documentParty(DocumentPartyEnum.APPLICANT)
                                      .build());
         otherManageDocuments.add(ManageDocuments.builder()
-                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("otherwitness.pdf")
+                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                             "otherwitness.pdf")
                                                    .build())
-                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem("Medical reports"))
+                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem(
+                                             "Medical reports"))
                                                              .build())
                                      .documentParty(DocumentPartyEnum.APPLICANT)
                                      .build());
         otherManageDocuments.add(ManageDocuments.builder()
-                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("otherwitness.pdf")
+                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                             "otherwitness.pdf")
                                                    .build())
-                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem("Medical Records"))
+                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem(
+                                             "Medical Records"))
                                                              .build())
                                      .documentParty(DocumentPartyEnum.APPLICANT)
                                      .build());
         otherManageDocuments.add(ManageDocuments.builder()
-                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("otherwitness.pdf")
+                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                             "otherwitness.pdf")
                                                    .build())
-                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem("Paternity test reports"))
+                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem(
+                                             "Paternity test reports"))
                                                              .build())
                                      .documentParty(DocumentPartyEnum.APPLICANT)
                                      .build());
         otherManageDocuments.add(ManageDocuments.builder()
-                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("otherwitness.pdf")
+                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                             "otherwitness.pdf")
                                                    .build())
                                      .documentCategories(DynamicList.builder()
-                                                             .value(DynamicListElement.defaultListItem("Drug and alcohol test (toxicology)"))
+                                                             .value(DynamicListElement.defaultListItem(
+                                                                 "Drug and alcohol test (toxicology)"))
                                                              .build())
                                      .documentParty(DocumentPartyEnum.APPLICANT)
                                      .build());
         otherManageDocuments.add(ManageDocuments.builder()
-                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("otherwitness.pdf")
+                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                             "otherwitness.pdf")
                                                    .build())
-                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem("Police report"))
+                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem(
+                                             "Police report"))
                                                              .build())
                                      .documentParty(DocumentPartyEnum.APPLICANT)
                                      .build());
         otherManageDocuments.add(ManageDocuments.builder()
-                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("otherwitness.pdf")
+                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                             "otherwitness.pdf")
                                                    .build())
-                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem("Cafcass reports"))
+                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem(
+                                             "Cafcass reports"))
                                                              .build())
                                      .documentParty(DocumentPartyEnum.APPLICANT)
                                      .build());
         otherManageDocuments.add(ManageDocuments.builder()
-                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("otherwitness.pdf")
+                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                             "otherwitness.pdf")
                                                    .build())
-                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem("Expert reports"))
+                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem(
+                                             "Expert reports"))
                                                              .build())
                                      .documentParty(DocumentPartyEnum.APPLICANT)
                                      .build());
         otherManageDocuments.add(ManageDocuments.builder()
-                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("otherwitness.pdf")
+                                     .document(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                                             "otherwitness.pdf")
                                                    .build())
-                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem("Applicant's statements"))
+                                     .documentCategories(DynamicList.builder().value(DynamicListElement.defaultListItem(
+                                             "Applicant's statements"))
                                                              .build())
                                      .documentParty(DocumentPartyEnum.APPLICANT)
                                      .build());
@@ -272,7 +317,8 @@ public class BundleCreateRequestMapperTest {
         List<Element<QuarantineLegalDoc>> citizenDoc = new ArrayList<>();
         QuarantineLegalDoc drugTest = QuarantineLegalDoc.builder()
             .drugAndAlcoholTestDocument(Document.builder().documentFileName("drugTest").build())
-            .documentParty("Applicant").categoryName("Drug and alcohol test (toxicology)").categoryId("drugAndAlcoholTest(toxicology)").build();
+            .documentParty("Applicant").categoryName("Drug and alcohol test (toxicology)").categoryId(
+                "drugAndAlcoholTest(toxicology)").build();
         citizenDoc.add(element(drugTest));
 
         QuarantineLegalDoc medicalRecords = QuarantineLegalDoc.builder()
@@ -303,7 +349,8 @@ public class BundleCreateRequestMapperTest {
         List<Element<QuarantineLegalDoc>> legalProfDoc = new ArrayList<>();
         QuarantineLegalDoc resultsOfHairStrandBloodTests = QuarantineLegalDoc.builder()
             .resultsOfHairStrandBloodTestsDocument(Document.builder().documentFileName("resultsOfHairStrandBloodTests").build())
-            .documentParty("Applicant").categoryName(RESULTS_OF_HAIR_STRAND_BLOOD_TESTS).categoryId("resultsOfHairStrandBloodTests").build();
+            .documentParty("Applicant").categoryName(RESULTS_OF_HAIR_STRAND_BLOOD_TESTS).categoryId(
+                "resultsOfHairStrandBloodTests").build();
         legalProfDoc.add(element(resultsOfHairStrandBloodTests));
 
         QuarantineLegalDoc policeDisclosures = QuarantineLegalDoc.builder()
@@ -354,7 +401,8 @@ public class BundleCreateRequestMapperTest {
 
         QuarantineLegalDoc specialGuardianshipReport = QuarantineLegalDoc.builder()
             .specialGuardianshipReportDocument(Document.builder().documentFileName("specialGuardianshipReport").build())
-            .documentParty("Cafcass Cymru").categoryName(SPECIAL_GUARDIANSHIP_REPORT).categoryId("specialGuardianshipReport").build();
+            .documentParty("Cafcass Cymru").categoryName(SPECIAL_GUARDIANSHIP_REPORT).categoryId(
+                "specialGuardianshipReport").build();
         courtStaffDoc.add(element(specialGuardianshipReport));
 
         QuarantineLegalDoc section37Report = QuarantineLegalDoc.builder()
@@ -380,7 +428,8 @@ public class BundleCreateRequestMapperTest {
         QuarantineLegalDoc applicantPreviousOrders = QuarantineLegalDoc.builder()
             .previousOrdersSubmittedWithApplicationDocument(Document.builder().documentFileName(
                 "applicantPreviousOrders").build())
-            .documentParty("Applicant").categoryName(PREVIOUS_ORDERS).categoryId("previousOrdersSubmittedWithApplication").build();
+            .documentParty("Applicant").categoryName(PREVIOUS_ORDERS).categoryId(
+                "previousOrdersSubmittedWithApplication").build();
         courtStaffDoc.add(element(applicantPreviousOrders));
 
         QuarantineLegalDoc respondentPreviousOrders = QuarantineLegalDoc.builder()
@@ -439,9 +488,11 @@ public class BundleCreateRequestMapperTest {
             .citizenResponseC7DocumentList(ElementUtils.wrapElements(citizenC7uploadedDocs))
             .citizenUploadedDocumentList(ElementUtils.wrapElements(uploadedDocuments))
             .miamDetails(MiamDetails.builder()
-                .miamCertificationDocumentUpload(Document.builder().documentFileName("maimCertDoc1").documentUrl("Url").build())
-                .miamCertificationDocumentUpload1(Document.builder().documentFileName("maimCertDoc2").documentUrl("Url").build())
-                .build())
+                             .miamCertificationDocumentUpload(Document.builder().documentFileName("maimCertDoc1").documentUrl(
+                                 "Url").build())
+                             .miamCertificationDocumentUpload1(Document.builder().documentFileName("maimCertDoc2").documentUrl(
+                                 "Url").build())
+                             .build())
             .applicantName("ApplicantFirstNameAndLastName")
             .fl401UploadWitnessDocuments(ElementUtils.wrapElements(fl401UploadWitnessDocuments))
             .fl401UploadSupportDocuments(ElementUtils.wrapElements(fl401UploadSupportingDocuments))
@@ -453,17 +504,20 @@ public class BundleCreateRequestMapperTest {
                                  .build())
             .build();
 
-        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(c100CaseData,"eventI",
-            Hearings.hearingsWith().build(),"sample.yaml");
+        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(
+            c100CaseData, "eventI",
+            Hearings.hearingsWith().build(), "sample.yaml"
+        );
         assertNotNull(bundleCreateRequest);
     }
 
     @Test
-    public void testBundleCreateRequestMapperForEmptyDetails() {
+    void testBundleCreateRequestMapperForEmptyDetails() {
         List<HearingDaySchedule> hearingDaySchedules = new ArrayList<>();
-        hearingDaySchedules.add(HearingDaySchedule.hearingDayScheduleWith().hearingJudgeId("123").hearingJudgeName("hearingJudgeName")
-            .hearingVenueId("venueId").hearingVenueAddress("venueAddress")
-            .hearingStartDateTime(LocalDateTime.now()).build());
+        hearingDaySchedules.add(HearingDaySchedule.hearingDayScheduleWith().hearingJudgeId("123").hearingJudgeName(
+                "hearingJudgeName")
+                                    .hearingVenueId("venueId").hearingVenueAddress("venueAddress")
+                                    .hearingStartDateTime(LocalDateTime.now()).build());
         List<CaseHearing> caseHearings = new ArrayList<>();
         caseHearings.add(CaseHearing.caseHearingWith().hmcStatus(LISTED).hearingDaySchedule(hearingDaySchedules).build());
 
@@ -478,20 +532,25 @@ public class BundleCreateRequestMapperTest {
             .finalDocument(Document.builder().documentFileName("C100AppDoc").documentUrl("Url").build())
             .c1ADocument(Document.builder().documentFileName("c1ADocument").documentUrl("Url").build())
             .bundleInformation(BundlingInformation.builder().build())
-            .finalWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("finalWelshDoc.pdf").build())
-            .c1AWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("C1AWelshDoc.pdf").build())
+            .finalWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                "finalWelshDoc.pdf").build())
+            .c1AWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                "C1AWelshDoc.pdf").build())
             .reviewDocuments(ReviewDocuments.builder().build())
             .build();
 
-        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(c100CaseData,"eventI",
-            Hearings.hearingsWith().caseHearings(caseHearings).build(), "sample.yaml");
+        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(
+            c100CaseData, "eventI",
+            Hearings.hearingsWith().caseHearings(caseHearings).build(), "sample.yaml"
+        );
         assertNotNull(bundleCreateRequest);
     }
 
     @Test
-    public void testBundleCreateRequestMapperForHearingDateAndTime() {
+    void testBundleCreateRequestMapperForHearingDateAndTime() {
         List<HearingDaySchedule> hearingDaySchedules = new ArrayList<>();
-        hearingDaySchedules.add(HearingDaySchedule.hearingDayScheduleWith().hearingJudgeId("123").hearingJudgeName("hearingJudgeName")
+        hearingDaySchedules.add(HearingDaySchedule.hearingDayScheduleWith().hearingJudgeId("123").hearingJudgeName(
+                "hearingJudgeName")
                                     .hearingVenueId("venueId").hearingVenueAddress("venueAddress")
                                     .hearingStartDateTime(LocalDateTime.of(2024, 9, 16, 14, 0)).build());
         List<CaseHearing> caseHearings = new ArrayList<>();
@@ -508,13 +567,20 @@ public class BundleCreateRequestMapperTest {
             .finalDocument(Document.builder().documentFileName("C100AppDoc").documentUrl("Url").build())
             .c1ADocument(Document.builder().documentFileName("c1ADocument").documentUrl("Url").build())
             .bundleInformation(BundlingInformation.builder().build())
-            .finalWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("finalWelshDoc.pdf").build())
-            .c1AWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("C1AWelshDoc.pdf").build())
+            .finalWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                "finalWelshDoc.pdf").build())
+            .c1AWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                "C1AWelshDoc.pdf").build())
             .reviewDocuments(ReviewDocuments.builder().build())
             .build();
 
         BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper
-            .mapCaseDataToBundleCreateRequest(c100CaseData, "eventI", Hearings.hearingsWith().caseHearings(caseHearings).build(), "sample.yaml");
+            .mapCaseDataToBundleCreateRequest(
+                c100CaseData,
+                "eventI",
+                Hearings.hearingsWith().caseHearings(caseHearings).build(),
+                "sample.yaml"
+            );
         assertNotNull(bundleCreateRequest);
         assertEquals(
             "16 Sep 2024 3:00 PM",
@@ -523,7 +589,7 @@ public class BundleCreateRequestMapperTest {
     }
 
     @Test
-    public void testBundleCreateRequestMapperForFl401OtherProceedings() {
+    void testBundleCreateRequestMapperForFl401OtherProceedings() {
         List<HearingDaySchedule> hearingDaySchedules = new ArrayList<>();
         hearingDaySchedules.add(HearingDaySchedule.hearingDayScheduleWith().hearingJudgeId("123").hearingJudgeName(
                 "hearingJudgeName")
@@ -570,13 +636,13 @@ public class BundleCreateRequestMapperTest {
             );
         assertNotNull(bundleCreateRequest);
         assertEquals(
-            bundleCreateRequest.getCaseDetails().getCaseData().getData().getAllOtherDocuments().get(0).getValue(),
+            bundleCreateRequest.getCaseDetails().getCaseData().getData().getAllOtherDocuments().getFirst().getValue(),
             otherProceedingsBundleDoc
         );
     }
 
     @Test
-    public void testBundleCreateRequestMapperForC100OtherProceedings() {
+    void testBundleCreateRequestMapperForC100OtherProceedings() {
         List<HearingDaySchedule> hearingDaySchedules = new ArrayList<>();
         hearingDaySchedules.add(HearingDaySchedule.hearingDayScheduleWith().hearingJudgeId("123").hearingJudgeName(
                 "hearingJudgeName")
@@ -622,17 +688,19 @@ public class BundleCreateRequestMapperTest {
             );
         assertNotNull(bundleCreateRequest);
         assertEquals(
-            bundleCreateRequest.getCaseDetails().getCaseData().getData().getAllOtherDocuments().get(0).getValue(),
+            bundleCreateRequest.getCaseDetails().getCaseData().getData().getAllOtherDocuments().getFirst().getValue(),
             otherProceedingsBundleDoc
         );
     }
 
     @Test
-    public void testBundleCreateRequestMapperForVenueAddressDetails() {
+    void testBundleCreateRequestMapperForVenueAddressDetails() {
         List<HearingDaySchedule> hearingDaySchedules = new ArrayList<>();
-        hearingDaySchedules.add(HearingDaySchedule.hearingDayScheduleWith().hearingJudgeId("123").hearingJudgeName("hearingJudgeName")
-            .hearingVenueName("venueName").hearingVenueId("venueId").hearingVenueAddress("venueAddress")
-            .hearingStartDateTime(LocalDateTime.now()).build());
+        hearingDaySchedules.add(HearingDaySchedule.hearingDayScheduleWith().hearingJudgeId("123").hearingJudgeName(
+                "hearingJudgeName")
+                                    .hearingVenueName("venueName").hearingVenueId("venueId").hearingVenueAddress(
+                "venueAddress")
+                                    .hearingStartDateTime(LocalDateTime.now()).build());
         List<CaseHearing> caseHearings = new ArrayList<>();
         caseHearings.add(CaseHearing.caseHearingWith().hmcStatus(LISTED).hearingDaySchedule(hearingDaySchedules).build());
 
@@ -647,20 +715,26 @@ public class BundleCreateRequestMapperTest {
             .finalDocument(Document.builder().documentFileName("C100AppDoc").documentUrl("Url").build())
             .c1ADocument(Document.builder().documentFileName("c1ADocument").documentUrl("Url").build())
             .bundleInformation(BundlingInformation.builder().build())
-            .finalWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("finalWelshDoc.pdf").build())
-            .c1AWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("C1AWelshDoc.pdf").build())
+            .finalWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                "finalWelshDoc.pdf").build())
+            .c1AWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                "C1AWelshDoc.pdf").build())
             .reviewDocuments(ReviewDocuments.builder().build())
             .build();
 
-        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(c100CaseData,"eventI",
-            Hearings.hearingsWith().caseHearings(caseHearings).build(), "sample.yaml");
+        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(
+            c100CaseData, "eventI",
+            Hearings.hearingsWith().caseHearings(caseHearings).build(), "sample.yaml"
+        );
         assertNotNull(bundleCreateRequest);
-        assertEquals("venueName" + "\n" + "venueAddress",
-            bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingVenueAddress());
+        assertEquals(
+            "venueName" + "\n" + "venueAddress",
+            bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingVenueAddress()
+        );
     }
 
     @Test
-    public void testBundleCreateRequestMapperWhenNoHearingScheduleDetails() {
+    void testBundleCreateRequestMapperWhenNoHearingScheduleDetails() {
         List<HearingDaySchedule> hearingDaySchedules = new ArrayList<>();
         hearingDaySchedules.add(HearingDaySchedule.hearingDayScheduleWith().build());
         List<CaseHearing> caseHearings = new ArrayList<>();
@@ -681,16 +755,20 @@ public class BundleCreateRequestMapperTest {
             .reviewDocuments(ReviewDocuments.builder().build())
             .build();
 
-        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(c100CaseData,"eventI",
-            Hearings.hearingsWith().caseHearings(caseHearings).build(), "sample.yaml");
+        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(
+            c100CaseData, "eventI",
+            Hearings.hearingsWith().caseHearings(caseHearings).build(), "sample.yaml"
+        );
         assertNotNull(bundleCreateRequest);
-        Assert.assertEquals("",bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingDateAndTime());
-        Assert.assertNull(bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingJudgeName());
-        Assert.assertNull(bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingVenueAddress());
+
+        BundleHearingInfo hearingDetails = bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails();
+        assertEquals("", hearingDetails.getHearingDateAndTime());
+        assertNull(hearingDetails.getHearingJudgeName());
+        assertNull(hearingDetails.getHearingVenueAddress());
     }
 
     @Test
-    public void testBundleCreateRequestMapperWhenNoHearingDetails() {
+    void testBundleCreateRequestMapperWhenNoHearingDetails() {
         CaseData c100CaseData = CaseData.builder()
             .id(123456789123L)
             .welshLanguageRequirement(Yes)
@@ -699,21 +777,27 @@ public class BundleCreateRequestMapperTest {
             .caseTypeOfApplication(PrlAppsConstants.C100_CASE_TYPE)
             .state(State.DECISION_OUTCOME)
             .bundleInformation(BundlingInformation.builder().build())
-            .finalWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("finalWelshDoc.pdf").build())
-            .c1AWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("C1AWelshDoc.pdf").build())
+            .finalWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                "finalWelshDoc.pdf").build())
+            .c1AWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                "C1AWelshDoc.pdf").build())
             .reviewDocuments(ReviewDocuments.builder().build())
             .build();
 
-        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(c100CaseData,"eventI",
-            null, "sample.yaml");
+        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(
+            c100CaseData, "eventI",
+            null, "sample.yaml"
+        );
         assertNotNull(bundleCreateRequest);
-        Assert.assertNull(bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingDateAndTime());
-        Assert.assertNull(bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingJudgeName());
-        Assert.assertNull(bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingVenueAddress());
+
+        BundleHearingInfo hearingDetails = bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails();
+        assertNull(hearingDetails.getHearingDateAndTime());
+        assertNull(hearingDetails.getHearingJudgeName());
+        assertNull(hearingDetails.getHearingVenueAddress());
     }
 
     @Test
-    public void testBundleCreateRequestMapperWhenNoCaseHearings() {
+    void testBundleCreateRequestMapperWhenNoCaseHearings() {
         CaseData c100CaseData = CaseData.builder()
             .id(123456789123L)
             .languagePreferenceWelsh(Yes)
@@ -725,21 +809,27 @@ public class BundleCreateRequestMapperTest {
             .finalDocument(Document.builder().documentFileName("C100AppDoc").documentUrl("Url").build())
             .c1ADocument(Document.builder().documentFileName("c1ADocument").documentUrl("Url").build())
             .bundleInformation(BundlingInformation.builder().build())
-            .finalWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("finalWelshDoc.pdf").build())
-            .c1AWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("C1AWelshDoc.pdf").build())
+            .finalWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                "finalWelshDoc.pdf").build())
+            .c1AWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                "C1AWelshDoc.pdf").build())
             .reviewDocuments(ReviewDocuments.builder().build())
             .build();
 
-        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(c100CaseData,"eventI",
-            Hearings.hearingsWith().build(), "sample.yaml");
+        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(
+            c100CaseData, "eventI",
+            Hearings.hearingsWith().build(), "sample.yaml"
+        );
         assertNotNull(bundleCreateRequest);
-        Assert.assertNull(bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingDateAndTime());
-        Assert.assertNull(bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingJudgeName());
-        Assert.assertNull(bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingVenueAddress());
+
+        BundleHearingInfo hearingDetails = bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails();
+        assertNull(hearingDetails.getHearingDateAndTime());
+        assertNull(hearingDetails.getHearingJudgeName());
+        assertNull(hearingDetails.getHearingVenueAddress());
     }
 
     @Test
-    public void testBundleCreateRequestMapperWhenHmcStatusAsCancelled() {
+    void testBundleCreateRequestMapperWhenHmcStatusAsCancelled() {
         List<HearingDaySchedule> hearingDaySchedules = new ArrayList<>();
         hearingDaySchedules.add(HearingDaySchedule.hearingDayScheduleWith().build());
         List<CaseHearing> caseHearings = new ArrayList<>();
@@ -756,17 +846,23 @@ public class BundleCreateRequestMapperTest {
             .finalDocument(Document.builder().documentFileName("C100AppDoc").documentUrl("Url").build())
             .c1ADocument(Document.builder().documentFileName("c1ADocument").documentUrl("Url").build())
             .bundleInformation(BundlingInformation.builder().build())
-            .finalWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("finalWelshDoc.pdf").build())
-            .c1AWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName("C1AWelshDoc.pdf").build())
+            .finalWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                "finalWelshDoc.pdf").build())
+            .c1AWelshDocument(Document.builder().documentUrl("url").documentBinaryUrl("url").documentFileName(
+                "C1AWelshDoc.pdf").build())
             .reviewDocuments(ReviewDocuments.builder().build())
             .build();
 
-        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(c100CaseData,"eventI",
-            Hearings.hearingsWith().caseHearings(caseHearings).build(), "sample.yaml");
+        BundleCreateRequest bundleCreateRequest = bundleCreateRequestMapper.mapCaseDataToBundleCreateRequest(
+            c100CaseData, "eventI",
+            Hearings.hearingsWith().caseHearings(caseHearings).build(), "sample.yaml"
+        );
         assertNotNull(bundleCreateRequest);
-        Assert.assertNull(bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingDateAndTime());
-        Assert.assertNull(bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingJudgeName());
-        Assert.assertNull(bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails().getHearingVenueAddress());
+
+        BundleHearingInfo hearingDetails = bundleCreateRequest.getCaseDetails().getCaseData().getData().getHearingDetails();
+        assertNull(hearingDetails.getHearingDateAndTime());
+        assertNull(hearingDetails.getHearingJudgeName());
+        assertNull(hearingDetails.getHearingVenueAddress());
     }
 
 }
