@@ -1,6 +1,5 @@
 package uk.gov.hmcts.reform.prl.rpa.mappers;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -13,46 +12,36 @@ import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.Organisation;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
 
-import javax.json.JsonObject;
 import java.time.LocalDate;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicInteger;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @ExtendWith(MockitoExtension.class)
-public class ApplicantsMapperTest {
+class ApplicantsMapperTest {
 
     @InjectMocks
-    ApplicantsMapper applicantsMapper;
-    @Mock
-    AddressMapper addressMapper;
-    @Mock
-    Organisation organisation;
-    PartyDetails partyDetails;
-    Address address;
-    List<Element<PartyDetails>> applicants;
-    JsonObject applicantSolicitorMap1;
-    HashMap<String, PartyDetails> applicantSolicitorMap;
-    AtomicInteger counter = new AtomicInteger();
+    private ApplicantsMapper applicantsMapper;
 
-    @BeforeEach
-    public void setup() {
+    @Mock
+    private AddressMapper addressMapper;
 
-        address = Address.builder()
+    private HashMap<String, PartyDetails> applicantSolicitorMap;
+
+    @Test
+    void testApplicantsMapperMap() {
+
+        Address address = Address.builder()
             .addressLine1("55 Test Street")
             .postTown("Town")
             .postCode("N12 3BH")
             .build();
 
-        organisation = Organisation.builder().organisationID("").build();
-
-
-        partyDetails = PartyDetails.builder()
+        PartyDetails partyDetails = PartyDetails.builder()
             .firstName("First name")
             .lastName("Last name")
             .dateOfBirth(LocalDate.of(1989, 11, 30))
@@ -60,31 +49,23 @@ public class ApplicantsMapperTest {
             .address(address)
             .canYouProvideEmailAddress(YesOrNo.Yes)
             .email("test@test.com")
-            .solicitorOrg(organisation)
+            .solicitorOrg(Organisation.builder().organisationID("").build())
             .build();
 
-        Element<PartyDetails> partyDetailsElement = Element.<PartyDetails>builder().value(partyDetails).build();
-        applicants = Collections.singletonList(partyDetailsElement);
+        List<Element<PartyDetails>> applicants = List.of(Element.<PartyDetails>builder().value(partyDetails).build());
+        applicantSolicitorMap = new HashMap<>();
 
-        applicantSolicitorMap = new HashMap<String, PartyDetails>();
-        //applicantSolicitorMap.put()
-    }
-
-    @Test
-    public void testApplicantsMapperMap() {
         assertNotNull(applicantsMapper.map(applicants, applicantSolicitorMap));
     }
 
     @Test
-    public void testIfApplicantsNull() {
-        applicants = null;
-        assertEquals(Collections.emptyList(),applicantsMapper.map(applicants, applicantSolicitorMap));
+    void testIfApplicantsNull() {
+        assertEquals(Collections.emptyList(), applicantsMapper.map(null, applicantSolicitorMap));
     }
 
     @Test
-    public void testIfApplicantsIsEmpty() {
-        applicants = Collections.emptyList();
-        assertTrue(applicantsMapper.map(applicants, applicantSolicitorMap).isEmpty());
+    void testIfApplicantsIsEmpty() {
+        assertTrue(applicantsMapper.map(Collections.emptyList(), applicantSolicitorMap).isEmpty());
     }
 
 }
