@@ -2,7 +2,6 @@ package uk.gov.hmcts.reform.prl.services;
 
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.Assert;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -119,6 +118,7 @@ import java.util.Map;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -156,7 +156,7 @@ import static uk.gov.hmcts.reform.prl.services.ManageOrderService.VALIDATION_ADD
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
 @ExtendWith(MockitoExtension.class)
-public class ManageOrderServiceTest {
+class ManageOrderServiceTest {
 
 
     @InjectMocks
@@ -221,7 +221,7 @@ public class ManageOrderServiceTest {
     public static final String authToken = "Bearer TestAuthToken";
 
     @BeforeEach
-    public void setup() {
+    void setup() {
         now = dateTime.now();
         DynamicListElement dynamicListElement = DynamicListElement.builder().code(TEST_UUID).label(" ").build();
         dynamicList = DynamicList.builder()
@@ -268,7 +268,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void getUpdatedCaseDataCaTest() {
+    void getUpdatedCaseDataCaTest() {
         Child child = Child.builder()
             .firstName("Test")
             .lastName("Name")
@@ -298,7 +298,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void getUpdatedCaseDataFl401() {
+    void getUpdatedCaseDataFl401() {
 
         ApplicantChild child = ApplicantChild.builder()
             .fullName("TestName")
@@ -333,7 +333,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void getUpdatedCaseDataFl401Welsh() {
+    void getUpdatedCaseDataFl401Welsh() {
 
         ApplicantChild child = ApplicantChild.builder()
             .fullName("TestName")
@@ -368,7 +368,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPupulateHeader() {
+    void testPupulateHeader() {
         CaseData caseData = CaseData.builder()
             .id(12345L)
             .caseTypeOfApplication("FL401")
@@ -387,7 +387,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void whenFl404bOrder_thenPopulateCustomFields() {
+    void whenFl404bOrder_thenPopulateCustomFields() {
         CaseData caseData = CaseData.builder()
             .id(12345674L)
             .createSelectOrderOptions(CreateSelectOrderOptionsEnum.blank)
@@ -445,7 +445,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void whenFl402Order_thenPopulateCustomFields() {
+    void whenFl402Order_thenPopulateCustomFields() {
         ManageOrders expectedDetails = ManageOrders.builder()
             .manageOrdersFl402CaseNo("12345674")
             .manageOrdersFl402CourtName("Court name")
@@ -488,7 +488,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testPopulatePreviewOrderFromCaSpecificOrder() throws Exception {
+    void testPopulatePreviewOrderFromCaSpecificOrder() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -519,7 +519,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromBlankOrderWithdrawn() throws Exception {
+    void testPopulatePreviewOrderFromBlankOrderWithdrawn() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -555,7 +555,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromAppointmentOfGuardian() throws Exception {
+    void testPopulatePreviewOrderFromAppointmentOfGuardian() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -591,7 +591,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromParentalResponsibility() throws Exception {
+    void testPopulatePreviewOrderFromParentalResponsibility() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -627,7 +627,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromTransferOfCase() throws Exception {
+    void testPopulatePreviewOrderFromTransferOfCase() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -663,7 +663,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromSpecificGuardian() throws Exception {
+    void testPopulatePreviewOrderFromSpecificGuardian() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -699,7 +699,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromPowerOfArrest() throws Exception {
+    void testPopulatePreviewOrderFromPowerOfArrest() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -736,7 +736,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testPopulateHeaderC100Test() {
+    void testPopulateHeaderC100Test() {
         CaseData.CaseDataBuilder builder = CaseData.builder();
         builder.id(12345L);
         builder.caseTypeOfApplication(C100_CASE_TYPE);
@@ -758,7 +758,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateHeaderC100TestWithCafcass() {
+    void testPopulateHeaderC100TestWithCafcass() {
         CaseData caseData = CaseData.builder()
             .id(12345L)
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -779,7 +779,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateHeaderC100TestWithRegionId() {
+    void testPopulateHeaderC100TestWithRegionId() {
         CaseData caseData = CaseData.builder()
             .id(12345L)
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -800,7 +800,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateHeaderNoFl401FamilyManTest() {
+    void testPopulateHeaderNoFl401FamilyManTest() {
         CaseData caseData = CaseData.builder()
             .id(12345L)
             .caseTypeOfApplication("FL401")
@@ -817,7 +817,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderBlankOrderFromCaseData() throws Exception {
+    void testPopulatePreviewOrderBlankOrderFromCaseData() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -852,7 +852,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderCAorderFromCaseData() throws Exception {
+    void testPopulatePreviewOrderCAorderFromCaseData() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -887,7 +887,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderSpecificGuardianOrderFromCaseData() throws Exception {
+    void testPopulatePreviewOrderSpecificGuardianOrderFromCaseData() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -924,7 +924,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromCaseData() throws Exception {
+    void testPopulatePreviewOrderFromCaseData() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -961,7 +961,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateFinalOrderFromCaseData() throws Exception {
+    void testPopulateFinalOrderFromCaseData() throws Exception {
 
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder().forename("test")
                                                                      .roles(List.of(Roles.JUDGE.getValue())).build());
@@ -1014,7 +1014,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateFinalOrderFromCaseDataWithNoCheck() throws Exception {
+    void testPopulateFinalOrderFromCaseDataWithNoCheck() throws Exception {
 
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder().forename("test")
                                                                      .roles(List.of(Roles.COURT_ADMIN.getValue())).build());
@@ -1083,7 +1083,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateFinalWelshOrderFromCaseData() throws Exception {
+    void testPopulateFinalWelshOrderFromCaseData() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1134,7 +1134,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateFinalUploadOrderFromCaseData() throws Exception {
+    void testPopulateFinalUploadOrderFromCaseData() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1172,7 +1172,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testPopulateFinalUploadOrderFromCaseDataWithMultipleOrders() throws Exception {
+    void testPopulateFinalUploadOrderFromCaseDataWithMultipleOrders() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1215,7 +1215,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testUpdateCaseDataWithAppointedGuardianNames() {
+    void testUpdateCaseDataWithAppointedGuardianNames() {
 
         List<Element<AppointedGuardianFullName>> namesList = new ArrayList<>();
         AppointedGuardianFullName appointedGuardianFullName = AppointedGuardianFullName.builder()
@@ -1237,12 +1237,12 @@ public class ManageOrderServiceTest {
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
 
         manageOrderService.updateCaseDataWithAppointedGuardianNames(caseDetails, namesList);
-        assertEquals("Full Name", caseDataNameList.get(0).getValue().getGuardianFullName());
+        assertEquals("Full Name", caseDataNameList.getFirst().getValue().getGuardianFullName());
     }
 
 
     @Test
-    public void testPopulateFinalOrderFromCaseDataFL401() throws Exception {
+    void testPopulateFinalOrderFromCaseDataFL401() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1307,7 +1307,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testPopulateFinalOrderFromCaseDataFL401ForMultipleOrders() throws Exception {
+    void testPopulateFinalOrderFromCaseDataFL401ForMultipleOrders() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1360,7 +1360,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromCaseDataCaseAmendDischargedVariedFl404b() throws Exception {
+    void testPopulatePreviewOrderFromCaseDataCaseAmendDischargedVariedFl404b() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1397,7 +1397,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromCaseDataCaseBlankOrderFl404b() throws Exception {
+    void testPopulatePreviewOrderFromCaseDataCaseBlankOrderFl404b() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1430,7 +1430,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromCaseDataNonMolestationOrderFl404a() throws Exception {
+    void testPopulatePreviewOrderFromCaseDataNonMolestationOrderFl404a() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1467,7 +1467,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromCaseDataNonMolestationOrderFl404aForC100() throws Exception {
+    void testPopulatePreviewOrderFromCaseDataNonMolestationOrderFl404aForC100() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1515,7 +1515,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromCaseDataGeneralN117() throws Exception {
+    void testPopulatePreviewOrderFromCaseDataGeneralN117() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1552,7 +1552,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromCaseDataNoticeOfProceedingsFl402() throws Exception {
+    void testPopulatePreviewOrderFromCaseDataNoticeOfProceedingsFl402() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1589,7 +1589,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderFromSdo() throws Exception {
+    void testPopulatePreviewOrderFromSdo() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1624,7 +1624,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateFinalOrderFromCaseDataCaseAmendDischargedVariedFl404b() throws Exception {
+    void testPopulateFinalOrderFromCaseDataCaseAmendDischargedVariedFl404b() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1670,7 +1670,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testAddOrderDetailsAndReturnReverseSortedListWithNullOrgName() throws Exception {
+    void testAddOrderDetailsAndReturnReverseSortedListWithNullOrgName() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1715,7 +1715,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateHeader() {
+    void testPopulateHeader() {
 
         List<OrderRecipientsEnum> recipientList = new ArrayList<>();
         List<Element<PartyDetails>> partyDetails = new ArrayList<>();
@@ -1748,7 +1748,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateHeaderWithCafcass() {
+    void testPopulateHeaderWithCafcass() {
 
         List<OrderRecipientsEnum> recipientList = new ArrayList<>();
         List<Element<PartyDetails>> partyDetails = new ArrayList<>();
@@ -1783,7 +1783,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testPopulateFinalOrderFromCaseDataCaseOccupationOrder() throws Exception {
+    void testPopulateFinalOrderFromCaseDataCaseOccupationOrder() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1827,7 +1827,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testgetOrderToAmendDownloadLink() {
+    void testgetOrderToAmendDownloadLink() {
 
         CaseData caseData = CaseData.builder()
             .orderCollection(List.of(Element.<OrderDetails>builder().id(uuid).value(OrderDetails
@@ -1842,7 +1842,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testpopulateCustomOrderFieldsGeneralForm() {
+    void testpopulateCustomOrderFieldsGeneralForm() {
         PartyDetails partyDetails = PartyDetails.builder()
             .firstName("fn")
             .lastName("ln")
@@ -1864,7 +1864,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testpopulateCustomOrderFieldsNoticeOfProceedings() {
+    void testpopulateCustomOrderFieldsNoticeOfProceedings() {
         ManageOrders expectedDetails = ManageOrders.builder()
             .manageOrdersFl402CaseNo("12345674")
             .manageOrdersFl402CourtName("Court name")
@@ -1892,7 +1892,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testServeOrderCA() throws Exception {
+    void testServeOrderCA() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -1976,7 +1976,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testServeOrderCAexception() throws Exception {
+    void testServeOrderCAexception() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -2014,7 +2014,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testServeOrderCaCafcassServedOptionsYes() throws Exception {
+    void testServeOrderCaCafcassServedOptionsYes() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -2075,7 +2075,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testServeOrderCaCafcassServedOptionsYesAndOtherPartiesOnlyC47a() throws Exception {
+    void testServeOrderCaCafcassServedOptionsYesAndOtherPartiesOnlyC47a() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -2136,7 +2136,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testServeOrderDA() throws Exception {
+    void testServeOrderDA() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -2225,37 +2225,37 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testgetOrderTemplateAndFileForSdo() {
+    void testgetOrderTemplateAndFileForSdo() {
         Map<String, String> fieldsMap = manageOrderService.getOrderTemplateAndFile(CreateSelectOrderOptionsEnum.standardDirectionsOrder);
         assertTrue(fieldsMap.containsKey(PrlAppsConstants.FILE_NAME));
     }
 
     @Test
-    public void testgetOrderTemplateAndFileForNoticeOfProceedingsParties() {
+    void testgetOrderTemplateAndFileForNoticeOfProceedingsParties() {
         Map<String, String> fieldsMap = manageOrderService.getOrderTemplateAndFile(CreateSelectOrderOptionsEnum.noticeOfProceedingsParties);
         assertTrue(fieldsMap.containsKey(PrlAppsConstants.FILE_NAME));
     }
 
     @Test
-    public void testgetOrderTemplateAndFileForNoticeOfProceedingsNonParties() {
+    void testgetOrderTemplateAndFileForNoticeOfProceedingsNonParties() {
         Map<String, String> fieldsMap = manageOrderService.getOrderTemplateAndFile(CreateSelectOrderOptionsEnum.noticeOfProceedingsNonParties);
         assertTrue(fieldsMap.containsKey(PrlAppsConstants.FILE_NAME));
     }
 
     @Test
-    public void testgetOrderTemplateAndFileForOccupation() {
+    void testgetOrderTemplateAndFileForOccupation() {
         Map<String, String> fieldsMap = manageOrderService.getOrderTemplateAndFile(CreateSelectOrderOptionsEnum.occupation);
         assertTrue(fieldsMap.containsKey(PrlAppsConstants.FILE_NAME));
     }
 
     @Test
-    public void testgetOrderTemplateAndFileForDoi() {
+    void testgetOrderTemplateAndFileForDoi() {
         Map<String, String> fieldsMap = manageOrderService.getOrderTemplateAndFile(CreateSelectOrderOptionsEnum.directionOnIssue);
         assertTrue(fieldsMap.containsKey(PrlAppsConstants.FILE_NAME));
     }
 
     @Test
-    public void testpopulateCustomOrderFieldsForUploadAnOrder() {
+    void testpopulateCustomOrderFieldsForUploadAnOrder() {
         ManageOrders expectedDetails = ManageOrders.builder()
             .manageOrdersFl402CaseNo("12345674")
             .manageOrdersFl402CourtName("Court name")
@@ -2283,7 +2283,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testpopulateCustomOrderFieldsForUploadAnOrderWelsh() {
+    void testpopulateCustomOrderFieldsForUploadAnOrderWelsh() {
         ManageOrders expectedDetails = ManageOrders.builder()
             .manageOrdersFl402CaseNo("12345674")
             .manageOrdersFl402CourtName("Court name")
@@ -2311,7 +2311,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetAllRecipientsForC100() {
+    void testGetAllRecipientsForC100() {
         PartyDetails partyDetails = PartyDetails.builder()
             .firstName("")
             .lastName("")
@@ -2330,7 +2330,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetAllRecipientsForFL401() {
+    void testGetAllRecipientsForFL401() {
         PartyDetails partyDetails = PartyDetails.builder()
             .firstName("")
             .lastName("")
@@ -2349,7 +2349,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetAllRecipientsForC100ApplicantOrApplicantSolicitor() {
+    void testGetAllRecipientsForC100ApplicantOrApplicantSolicitor() {
         PartyDetails partyDetails = PartyDetails.builder()
             .firstName("")
             .lastName("")
@@ -2368,7 +2368,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetAllRecipientsForFL401ApplicantOrApplicantSolicitor() {
+    void testGetAllRecipientsForFL401ApplicantOrApplicantSolicitor() {
         PartyDetails partyDetails = PartyDetails.builder()
             .firstName("")
             .lastName("")
@@ -2387,7 +2387,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetSelectedOrderInfoForUploadDomesticAbuseOrders() {
+    void testGetSelectedOrderInfoForUploadDomesticAbuseOrders() {
         CaseData caseData = CaseData.builder()
             .caseTypeOfApplication("FL401")
             .domesticAbuseOrders(DomesticAbuseOrdersEnum.blankOrder)
@@ -2396,7 +2396,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetSelectedOrderInfoForUploadFcOrders() {
+    void testGetSelectedOrderInfoForUploadFcOrders() {
         CaseData caseData = CaseData.builder()
             .caseTypeOfApplication("FL401")
             .fcOrders(FcOrdersEnum.summonToAppearToCourt)
@@ -2405,7 +2405,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetSelectedOrderInfoForUploadOtherOrdersOption() {
+    void testGetSelectedOrderInfoForUploadOtherOrdersOption() {
         CaseData caseData = CaseData.builder()
             .caseTypeOfApplication("FL401")
             .otherOrdersOption(OtherOrdersOptionEnum.other)
@@ -2415,7 +2415,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetSelectedOrderInForUpload() {
+    void testGetSelectedOrderInForUpload() {
         CaseData caseData = CaseData.builder()
             .caseTypeOfApplication("FL401")
             .build();
@@ -2423,7 +2423,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetSelectedOrderIdForUploadDomesticAbuseOrders() {
+    void testGetSelectedOrderIdForUploadDomesticAbuseOrders() {
         CaseData caseData = CaseData.builder()
             .caseTypeOfApplication("FL401")
             .domesticAbuseOrders(DomesticAbuseOrdersEnum.blankOrder)
@@ -2432,7 +2432,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetSelectedOrderIdForUploadFcOrders() {
+    void testGetSelectedOrderIdForUploadFcOrders() {
         CaseData caseData = CaseData.builder()
             .caseTypeOfApplication("FL401")
             .fcOrders(FcOrdersEnum.summonToAppearToCourt)
@@ -2441,7 +2441,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetSelectedOrderIdForUploadOtherOrdersOption() {
+    void testGetSelectedOrderIdForUploadOtherOrdersOption() {
         CaseData caseData = CaseData.builder()
             .caseTypeOfApplication("FL401")
             .otherOrdersOption(OtherOrdersOptionEnum.other)
@@ -2451,7 +2451,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetSelectedOrderIdForUpload() {
+    void testGetSelectedOrderIdForUpload() {
         CaseData caseData = CaseData.builder()
             .caseTypeOfApplication("FL401")
             .build();
@@ -2459,7 +2459,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetSelectedOrderIdForUploadforChildArrOrder() {
+    void testGetSelectedOrderIdForUploadforChildArrOrder() {
         CaseData caseData = CaseData.builder()
             .childArrangementOrders(ChildArrangementOrdersEnum.blankOrderOrDirections)
             .caseTypeOfApplication("FL401")
@@ -2468,7 +2468,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateDraftOrderForJudge() throws Exception {
+    void testPopulateDraftOrderForJudge() throws Exception {
         when(userService.getUserDetails(Mockito.anyString()))
             .thenReturn(UserDetails.builder().roles(List.of(Roles.JUDGE.getValue())).build());
 
@@ -2502,25 +2502,25 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testOrderStatusCreatedByAdmin() {
+    void testOrderStatusCreatedByAdmin() {
         String status = manageOrderService.getOrderStatus("createAnOrder", "COURT_ADMIN", null, null);
         assertEquals(OrderStatusEnum.createdByCA.getDisplayedValue(), status);
     }
 
     @Test
-    public void testOrderStatusCreatedByJudge() {
+    void testOrderStatusCreatedByJudge() {
         String status = manageOrderService.getOrderStatus("createAnOrder", "JUDGE", null, " ");
         assertEquals(OrderStatusEnum.createdByJudge.getDisplayedValue(), status);
     }
 
     @Test
-    public void testOrderStatusCreatedBySolicitor() {
+    void testOrderStatusCreatedBySolicitor() {
         String status = manageOrderService.getOrderStatus("draftAnOrder", "SOLICITOR", null, "");
         assertEquals(OrderStatusEnum.draftedByLR.getDisplayedValue(), status);
     }
 
     @Test
-    public void testOrderStatusReviewByAdminAlreadyReviewedByJudge() {
+    void testOrderStatusReviewByAdminAlreadyReviewedByJudge() {
         String status = manageOrderService.getOrderStatus(
             "createAnOrder",
             "COURT_ADMIN",
@@ -2531,7 +2531,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testOrderStatusReviewByAdminNotReviewedByJudge() {
+    void testOrderStatusReviewByAdminNotReviewedByJudge() {
         String status = manageOrderService.getOrderStatus(
             "createAnOrder",
             "COURT_ADMIN",
@@ -2542,7 +2542,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testOrderStatusReviewByJudge() {
+    void testOrderStatusReviewByJudge() {
         String status = manageOrderService.getOrderStatus(
             "createAnOrder",
             "JUDGE",
@@ -2553,7 +2553,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testOrderStatusReviewByManager() {
+    void testOrderStatusReviewByManager() {
         String status = manageOrderService.getOrderStatus(
             "createAnOrder",
             "COURT_ADMIN",
@@ -2564,7 +2564,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateFinalUploadOrder() throws Exception {
+    void testPopulateFinalUploadOrder() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -2596,7 +2596,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateFinalUploadOrderWithDateOrderMade() throws Exception {
+    void testPopulateFinalUploadOrderWithDateOrderMade() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -2629,21 +2629,21 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetLoggedInUserTypeSolicitor() {
+    void testGetLoggedInUserTypeSolicitor() {
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
                                                                      .roles(List.of(Roles.SOLICITOR.getValue())).build());
         assertEquals(UserRoles.SOLICITOR.name(), manageOrderService.getLoggedInUserType("test"));
     }
 
     @Test
-    public void testGetLoggedInUserTypeCitizen() {
+    void testGetLoggedInUserTypeCitizen() {
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
                                                                      .roles(List.of(Roles.CITIZEN.getValue())).build());
         assertEquals(UserRoles.CITIZEN.name(), manageOrderService.getLoggedInUserType("test"));
     }
 
     @Test
-    public void testGetLoggedInUserTypeSystemUpdate() {
+    void testGetLoggedInUserTypeSystemUpdate() {
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
                                                                      .roles(List.of(Roles.SYSTEM_UPDATE.getValue())).build());
         assertEquals(UserRoles.SYSTEM_UPDATE.name(), manageOrderService.getLoggedInUserType("test"));
@@ -2651,7 +2651,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testGetLoggedInUserTypeCourtAdminFromAmRoleAssignment() {
+    void testGetLoggedInUserTypeCourtAdminFromAmRoleAssignment() {
         RoleAssignmentServiceResponse roleAssignmentServiceResponse = setAndGetRoleAssignmentServiceResponse(
             "hearing-centre-admin");
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
@@ -2666,7 +2666,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetLoggedInUserTypeSolicitorFromIdam() {
+    void testGetLoggedInUserTypeSolicitorFromIdam() {
         RoleAssignmentServiceResponse roleAssignmentServiceResponse = setAndGetRoleAssignmentServiceResponse(
             "caseworker-privatelaw-solicitor");
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
@@ -2681,7 +2681,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetLoggedInUserTypeJudgeFromAmRoleAssignment() {
+    void testGetLoggedInUserTypeJudgeFromAmRoleAssignment() {
         RoleAssignmentServiceResponse roleAssignmentServiceResponse = setAndGetRoleAssignmentServiceResponse("allocated-magistrate");
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
             .id("123")
@@ -2694,7 +2694,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetLoggedInUserTypeForSystemUpdateFromIdam() {
+    void testGetLoggedInUserTypeForSystemUpdateFromIdam() {
         RoleAssignmentServiceResponse roleAssignmentServiceResponse = setAndGetRoleAssignmentServiceResponse(
             "caseworker-privatelaw-systemupdate");
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
@@ -2709,7 +2709,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetLoggedInUserTypeForCitizenFromIdam() {
+    void testGetLoggedInUserTypeForCitizenFromIdam() {
         RoleAssignmentServiceResponse roleAssignmentServiceResponse = setAndGetRoleAssignmentServiceResponse("citizen");
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
                                                                      .id("123")
@@ -2734,7 +2734,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testServeOrderCaWithRecipients() throws Exception {
+    void testServeOrderCaWithRecipients() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -2806,7 +2806,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testServeOrderCaWithRecipientsOptionsOnlyC47a() throws Exception {
+    void testServeOrderCaWithRecipientsOptionsOnlyC47a() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -2882,7 +2882,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testCheckOnlyC47aOrderSelectedToServeForC47A() {
+    void testCheckOnlyC47aOrderSelectedToServeForC47A() {
         DynamicMultiselectListElement dynamicMultiselectListElement = DynamicMultiselectListElement.builder()
             .code("test")
             .label("testC47A")
@@ -2938,11 +2938,11 @@ public class ManageOrderServiceTest {
             .build();
         when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
         Map<String, Object> stringObjectMap = manageOrderService.serveOrderMidEvent(callbackRequest);
-        Assert.assertTrue(!stringObjectMap.isEmpty());
+        assertFalse(stringObjectMap.isEmpty());
     }
 
     @Test
-    public void testCheckOnlyC47aOrderSelectedToServeForC21() {
+    void testCheckOnlyC47aOrderSelectedToServeForC21() {
         DynamicMultiselectListElement dynamicMultiselectListElement = DynamicMultiselectListElement.builder()
             .code("test")
             .label("testC21")
@@ -3004,11 +3004,11 @@ public class ManageOrderServiceTest {
         when(welshCourtEmail.populateCafcassCymruEmailInManageOrders(Mockito.any())).thenReturn(courtEmail);
 
         Map<String, Object> stringObjectMap = manageOrderService.serveOrderMidEvent(callbackRequest);
-        Assert.assertTrue(!stringObjectMap.isEmpty());
+        assertFalse(stringObjectMap.isEmpty());
     }
 
     @Test
-    public void testPopulatePreviewOrder() throws Exception {
+    void testPopulatePreviewOrder() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -3087,11 +3087,11 @@ public class ManageOrderServiceTest {
             .createSelectOrderOptions(CreateSelectOrderOptionsEnum.specialGuardianShip)
             .build();
         Map<String, Object> result = manageOrderService.populatePreviewOrder("test", callbackRequest, caseData, PrlAppsConstants.ENGLISH);
-        Assert.assertTrue(!result.isEmpty());
+        assertFalse(result.isEmpty());
     }
 
     @Test
-    public void testPopulateFinalUploadOrderFromCaseDataWithMultipleOrdersForWelsh() throws Exception {
+    void testPopulateFinalUploadOrderFromCaseDataWithMultipleOrdersForWelsh() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -3141,7 +3141,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHearingsDropdownWhenNoHearings() {
+    void testHearingsDropdownWhenNoHearings() {
         //when
         DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.builder().code("12345:").label("test")
                                                                   .build()).build();
@@ -3163,7 +3163,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHearingsDropdownWhenNoCompletedHearings() {
+    void testHearingsDropdownWhenNoCompletedHearings() {
         //when
         DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.builder().code("12345:").label("test")
                                                                   .build()).build();
@@ -3191,7 +3191,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHearingsDropdownWhenNoHearingDate() {
+    void testHearingsDropdownWhenNoHearingDate() {
         //when
         DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.builder().code("12345:").label("test")
                                                                   .build()).build();
@@ -3220,7 +3220,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHearingsDropdownWhenCompletedHearingsAvailable() {
+    void testHearingsDropdownWhenCompletedHearingsAvailable() {
         //when
         DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.builder().code("12345:").label("test")
                                                                   .build()).build();
@@ -3254,7 +3254,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHearingsDropdownWhenMultipleHearingsAvailable() {
+    void testHearingsDropdownWhenMultipleHearingsAvailable() {
         //when
         DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.builder().code("12345:").label("test")
                                                                   .build()).build();
@@ -3305,7 +3305,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testResetChildOptions() {
+    void testResetChildOptions() {
         DynamicMultiselectListElement dynamicMultiselectListElement = DynamicMultiselectListElement.builder()
             .code("test")
             .label("testC47A")
@@ -3363,11 +3363,11 @@ public class ManageOrderServiceTest {
             .build();
         when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
         manageOrderService.resetChildOptions(callbackRequest);
-        Assert.assertEquals(null,callbackRequest.getCaseDetails().getData().get(CHILD_OPTION));
+        assertEquals(null,callbackRequest.getCaseDetails().getData().get(CHILD_OPTION));
     }
 
     @Test
-    public void testPopulateJudgeNameForFinalDoc() throws Exception {
+    void testPopulateJudgeNameForFinalDoc() throws Exception {
 
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -3419,7 +3419,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetJudgeFullName() {
+    void testGetJudgeFullName() {
         StandardDirectionOrder standardDirectionOrder = StandardDirectionOrder.builder()
             .sdoAllocateOrReserveJudgeName(JudicialUser.builder().idamId("1234").personalCode("ABC").build())
             .sdoLocalAuthorityList(List.of(SdoLocalAuthorityEnum.localAuthorityLetter))
@@ -3444,7 +3444,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testResetChildOptionsWithIsTheOderAboutAllChildren() {
+    void testResetChildOptionsWithIsTheOderAboutAllChildren() {
         DynamicMultiselectListElement dynamicMultiselectListElement = DynamicMultiselectListElement.builder()
             .code("test")
             .label("testC47A")
@@ -3503,11 +3503,11 @@ public class ManageOrderServiceTest {
             .build();
         when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
         manageOrderService.resetChildOptions(callbackRequest);
-        Assert.assertNotNull(null,callbackRequest.getCaseDetails().getData().get(CHILD_OPTION));
+        assertNotNull(callbackRequest.getCaseDetails().getData().get(CHILD_OPTION));
     }
 
     @Test
-    public void testSetChildOptionsIfOrderAboutAllChildrenYes() {
+    void testSetChildOptionsIfOrderAboutAllChildrenYes() {
 
         DynamicMultiselectListElement dynamicMultiselectListElement = DynamicMultiselectListElement.builder()
             .code("test")
@@ -3565,11 +3565,11 @@ public class ManageOrderServiceTest {
         when(dynamicMultiSelectListService.getChildrenMultiSelectList(caseData)).thenReturn(List.of(dynamicMultiselectListElementUpdated));
 
         CaseData caseData1 = manageOrderService.setChildOptionsIfOrderAboutAllChildrenYes(caseData);
-        Assert.assertEquals("John (Child 1)",caseData1.getManageOrders().getChildOption().getListItems().get(0).getLabel());
+        assertEquals("John (Child 1)",caseData1.getManageOrders().getChildOption().getListItems().getFirst().getLabel());
     }
 
     @Test
-    public void testSetMarkedToServeEmailNotificationWithOrdersNeedToBeServedYes() {
+    void testSetMarkedToServeEmailNotificationWithOrdersNeedToBeServedYes() {
 
         ManageOrders manageOrders = ManageOrders.builder()
             .ordersNeedToBeServed(YesOrNo.Yes)
@@ -3591,12 +3591,12 @@ public class ManageOrderServiceTest {
         when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
         Map<String, Object> caseDataUpdated = new HashMap<>();
         manageOrderService.setMarkedToServeEmailNotification(caseData,caseDataUpdated);
-        Assert.assertEquals(YesOrNo.Yes,caseDataUpdated.get("markedToServeEmailNotification"));
+        assertEquals(YesOrNo.Yes,caseDataUpdated.get("markedToServeEmailNotification"));
 
     }
 
     @Test
-    public void testSetMarkedToServeEmailNotificationWithOrdersNeedToBeServedNo() {
+    void testSetMarkedToServeEmailNotificationWithOrdersNeedToBeServedNo() {
 
         ManageOrders manageOrders = ManageOrders.builder()
             .ordersNeedToBeServed(YesOrNo.No)
@@ -3618,21 +3618,21 @@ public class ManageOrderServiceTest {
         when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
         Map<String, Object> caseDataUpdated = new HashMap<>();
         manageOrderService.setMarkedToServeEmailNotification(caseData,caseDataUpdated);
-        Assert.assertEquals(YesOrNo.Yes,caseDataUpdated.get("markedToServeEmailNotification"));
+        assertEquals(YesOrNo.Yes,caseDataUpdated.get("markedToServeEmailNotification"));
 
     }
 
     @Test
-    public void testCleanUpSelectedManageOrderOptions() {
+    void testCleanUpSelectedManageOrderOptions() {
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("manageOrdersOptions","manageOrdersOptions");
         manageOrderService.cleanUpSelectedManageOrderOptions(caseDataUpdated);
-        Assert.assertNull(caseDataUpdated.get("manageOrdersOptions"));
+        assertNull(caseDataUpdated.get("manageOrdersOptions"));
 
     }
 
     @Test
-    public void testServeFinalOrderC43() throws Exception {
+    void testServeFinalOrderC43() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -3700,7 +3700,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testSaveAdditionalOrderDocuments() {
+    void testSaveAdditionalOrderDocuments() {
         //Given
         Document document1 = Document.builder().documentFileName("abc.pdf").build();
         Document document2 = Document.builder().documentFileName("xyz.pdf").build();
@@ -3734,11 +3734,11 @@ public class ManageOrderServiceTest {
         assertNotNull(caseDataUpdated.get("additionalOrderDocuments"));
         List<Element<AdditionalOrderDocument>> additionalOrderDocuments =
             (List<Element<AdditionalOrderDocument>>) caseDataUpdated.get("additionalOrderDocuments");
-        assertEquals(2, additionalOrderDocuments.get(0).getValue().getAdditionalDocuments().size());
+        assertEquals(2, additionalOrderDocuments.getFirst().getValue().getAdditionalDocuments().size());
     }
 
     @Test
-    public void testSkipSaveAdditionalOrderDocumentsIfEmpty() {
+    void testSkipSaveAdditionalOrderDocumentsIfEmpty() {
         //Given
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -3757,7 +3757,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetGeneratedDocument() {
+    void testGetGeneratedDocument() {
         GeneratedDocumentInfo generatedDocumentInfo1 = GeneratedDocumentInfo.builder().build();
         assertNotNull(manageOrderService.getGeneratedDocument(
             generatedDocumentInfo1, true, new HashMap<>())
@@ -3765,15 +3765,15 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testCleanUpServeOrderOptions() {
+    void testCleanUpServeOrderOptions() {
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("serveOrderAdditionalDocuments","serveOrderAdditionalDocuments");
         manageOrderService.cleanUpServeOrderOptions(caseDataUpdated);
-        Assert.assertNull(caseDataUpdated.get("serveOrderAdditionalDocuments"));
+        assertNull(caseDataUpdated.get("serveOrderAdditionalDocuments"));
     }
 
     @Test
-    public void testSetFieldsForWaTaskForJudgeCreateOrder() {
+    void testSetFieldsForWaTaskForJudgeCreateOrder() {
         when(dateTime.now()).thenReturn(LocalDateTime.now());
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
                                                                      .roles(List.of(Roles.JUDGE.getValue())).build());
@@ -3797,7 +3797,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testSetFieldsForWaTaskForCourtAdminCreateOrder() {
+    void testSetFieldsForWaTaskForCourtAdminCreateOrder() {
         when(dateTime.now()).thenReturn(LocalDateTime.now());
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
                                                                      .roles(List.of(Roles.COURT_ADMIN.getValue())).build());
@@ -3821,7 +3821,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testSetFieldsForWaTaskForUploadOrder() {
+    void testSetFieldsForWaTaskForUploadOrder() {
         when(dateTime.now()).thenReturn(LocalDateTime.now());
 
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
@@ -3846,7 +3846,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testServeOrderC100() throws Exception {
+    void testServeOrderC100() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -3937,7 +3937,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetAdditionalRequirementsForHearingReqForOtherOrderDraft() {
+    void testGetAdditionalRequirementsForHearingReqForOtherOrderDraft() {
         List<Element<HearingData>> ordersHearingDetails = new ArrayList<>();
         HearingData hearingData = HearingData.builder()
             .hearingDateConfirmOptionEnum(HearingDateConfirmOptionEnum.dateReservedWithListAssit)
@@ -3967,7 +3967,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetAdditionalRequirementsForHearingReqForOtherOrderFinal() {
+    void testGetAdditionalRequirementsForHearingReqForOtherOrderFinal() {
         List<Element<HearingData>> ordersHearingDetails = new ArrayList<>();
         HearingData hearingData = HearingData.builder()
             .hearingDateConfirmOptionEnum(HearingDateConfirmOptionEnum.dateReservedWithListAssit)
@@ -3997,7 +3997,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetAdditionalRequirementsForHearingReqForSdoDraft() {
+    void testGetAdditionalRequirementsForHearingReqForSdoDraft() {
         List<Element<HearingData>> ordersHearingDetails = new ArrayList<>();
         HearingData hearingData = HearingData.builder()
             .hearingDateConfirmOptionEnum(HearingDateConfirmOptionEnum.dateReservedWithListAssit)
@@ -4035,7 +4035,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetAdditionalRequirementsForHearingReqForSdoFinal() {
+    void testGetAdditionalRequirementsForHearingReqForSdoFinal() {
         List<Element<HearingData>> ordersHearingDetails = new ArrayList<>();
         HearingData hearingData = HearingData.builder()
             .hearingDateConfirmOptionEnum(HearingDateConfirmOptionEnum.dateReservedWithListAssit)
@@ -4071,7 +4071,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testServeOrder() {
+    void testServeOrder() {
         List<DynamicMultiselectListElement> dynamicMultiselectListElements = new ArrayList<>();
         DynamicMultiselectListElement partyDynamicMultiselectListElement = DynamicMultiselectListElement.builder()
             .code("00000000-0000-0000-0000-000000000000")
@@ -4119,7 +4119,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testServeFL401Order() throws Exception {
+    void testServeFL401Order() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -4208,7 +4208,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateServeOrderDetails() {
+    void testPopulateServeOrderDetails() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -4227,7 +4227,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void givenRespondentLipNonPersonalServicePrefPostShouldGiveErrorIfAddressIsNotPresent() {
+    void givenRespondentLipNonPersonalServicePrefPostShouldGiveErrorIfAddressIsNotPresent() {
         List<Element<PartyDetails>> respondents =
             List.of(ElementUtils.element(UUID.fromString("e406bcc3-3c91-45db-9dcc-3a5c14930851"),PartyDetails.builder()
                 .contactPreferences(ContactPreferences.post)
@@ -4260,7 +4260,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void givenRespondentLipNonPersonalServiceContactPrefNotPresentShouldGiveErrorIfAddressIsNotPresent() {
+    void givenRespondentLipNonPersonalServiceContactPrefNotPresentShouldGiveErrorIfAddressIsNotPresent() {
         List<Element<PartyDetails>> respondents =
             List.of(ElementUtils.element(UUID.fromString("e406bcc3-3c91-45db-9dcc-3a5c14930851"),PartyDetails.builder()
                     .email("test@test.com")
@@ -4292,7 +4292,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void givenRespondentLipNonPersonalServiceEmailAddressNotPresentShouldGiveErrorIfAddressIsNotPresent() {
+    void givenRespondentLipNonPersonalServiceEmailAddressNotPresentShouldGiveErrorIfAddressIsNotPresent() {
         List<Element<PartyDetails>> respondents =
             List.of(ElementUtils.element(UUID.fromString("e406bcc3-3c91-45db-9dcc-3a5c14930851"),PartyDetails.builder()
                 .doTheyHaveLegalRepresentation(YesNoDontKnow.no)
@@ -4325,7 +4325,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void givenRespondenNonPersonalServiceIfRepresentedShouldNotGiveErrorIfAddressIsNotPresent() {
+    void givenRespondenNonPersonalServiceIfRepresentedShouldNotGiveErrorIfAddressIsNotPresent() {
         List<Element<PartyDetails>> respondents =
             List.of(ElementUtils.element(UUID.fromString("e406bcc3-3c91-45db-9dcc-3a5c14930851"),PartyDetails.builder()
                 .doTheyHaveLegalRepresentation(YesNoDontKnow.yes)
@@ -4360,7 +4360,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void givenRespondentLipNonPersonalServiceShouldNotGiveErrorIfAddressIsPresent() {
+    void givenRespondentLipNonPersonalServiceShouldNotGiveErrorIfAddressIsPresent() {
         List<Element<PartyDetails>> respondents =
             List.of(ElementUtils.element(UUID.fromString("e406bcc3-3c91-45db-9dcc-3a5c14930851"),PartyDetails.builder()
                     .email("test@test.com")
@@ -4394,7 +4394,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void givenRespondentLipPersonalServiceShouldNotGiveError() {
+    void givenRespondentLipPersonalServiceShouldNotGiveError() {
         List<Element<PartyDetails>> respondents =
             List.of(ElementUtils.element(UUID.fromString("e406bcc3-3c91-45db-9dcc-3a5c14930851"),PartyDetails.builder()
                 .doTheyHaveLegalRepresentation(YesNoDontKnow.no)
@@ -4427,7 +4427,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void givenOtherPartyNonPersonalServiceShouldGiveErrorIfAddressIsNotPresent() {
+    void givenOtherPartyNonPersonalServiceShouldGiveErrorIfAddressIsNotPresent() {
         List<Element<PartyDetails>> respondents =
             List.of(ElementUtils.element(UUID.fromString("e406bcc3-3c91-45db-9dcc-3a5c14930851"),PartyDetails.builder()
                 .doTheyHaveLegalRepresentation(YesNoDontKnow.no)
@@ -4461,7 +4461,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void givenOtherPartyPersonalServiceShouldGiveErrorIfAddressIsNotPresent() {
+    void givenOtherPartyPersonalServiceShouldGiveErrorIfAddressIsNotPresent() {
         List<Element<PartyDetails>> respondents =
             List.of(ElementUtils.element(UUID.fromString("e406bcc3-3c91-45db-9dcc-3a5c14930851"), PartyDetails.builder()
                 .doTheyHaveLegalRepresentation(YesNoDontKnow.no)
@@ -4496,7 +4496,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void givenOtherPartyShouldNotGiveErrorIfAddressIsPresent() {
+    void givenOtherPartyShouldNotGiveErrorIfAddressIsPresent() {
         List<Element<PartyDetails>> respondents =
             List.of(ElementUtils.element(UUID.fromString("e406bcc3-3c91-45db-9dcc-3a5c14930851"), PartyDetails.builder()
                 .doTheyHaveLegalRepresentation(YesNoDontKnow.no)
@@ -4569,7 +4569,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testWaSetHearingOptionDetailsForTask_whenDoYouWantToEditOrderYes() {
+    void testWaSetHearingOptionDetailsForTask_whenDoYouWantToEditOrderYes() {
 
         List<Element<HearingData>> hearingDataList = new ArrayList<>();
         HearingData hearingdata = HearingData.builder()
@@ -4614,7 +4614,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testWaSetHearingOptionDetailsForTask_whenDoYouWantToEditOrderNo() {
+    void testWaSetHearingOptionDetailsForTask_whenDoYouWantToEditOrderNo() {
 
         List<Element<HearingData>> hearingDataList = new ArrayList<>();
         HearingData hearingdata = HearingData.builder()
@@ -4654,7 +4654,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testWaSetHearingOptionDetailsForTask_whenManagerOrdersJourney() {
+    void testWaSetHearingOptionDetailsForTask_whenManagerOrdersJourney() {
 
         List<Element<HearingData>> hearingDataList = new ArrayList<>();
         HearingData hearingdata = HearingData.builder()
@@ -4695,7 +4695,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testWaIsHearingTaskNeeded_whenRejected_thenHearingTaskNeeded_shuldbe_No() {
+    void testWaIsHearingTaskNeeded_whenRejected_thenHearingTaskNeeded_shuldbe_No() {
 
         Map<String, Object> caseDataUpdated = new HashMap<>();
 
@@ -4723,7 +4723,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testWaIsHearingTaskNeeded_whenJudgeLaReviewRequired_thenHearingTaskNeeded_shuldbe_No() {
+    void testWaIsHearingTaskNeeded_whenJudgeLaReviewRequired_thenHearingTaskNeeded_shuldbe_No() {
 
         Map<String, Object> caseDataUpdated = new HashMap<>();
 
@@ -4751,7 +4751,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testWaIsHearingTaskNeeded_whenManagerReviewRequired_thenHearingTaskNeeded_shuldbe_No() {
+    void testWaIsHearingTaskNeeded_whenManagerReviewRequired_thenHearingTaskNeeded_shuldbe_No() {
 
         Map<String, Object> caseDataUpdated = new HashMap<>();
 
@@ -4779,7 +4779,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testUpdateOrderFieldsForDocmosis() {
+    void testUpdateOrderFieldsForDocmosis() {
 
         DraftOrder draftOrder = DraftOrder.builder().judgeOrMagistratesLastName("testJudge").build();
 
@@ -4795,7 +4795,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHandleFetchOrderDetails() {
+    void testHandleFetchOrderDetails() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -4827,7 +4827,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testGetHearingDataFromExistingHearingData() {
+    void testGetHearingDataFromExistingHearingData() {
 
         List<Element<HearingData>> hearingDataList = new ArrayList<>();
         HearingData hearingdata = HearingData.builder()
@@ -4853,7 +4853,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateFinalOrderFromCaseDataForUploadAnOrder() throws Exception {
+    void testPopulateFinalOrderFromCaseDataForUploadAnOrder() throws Exception {
 
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder().forename("test")
                                                                      .roles(List.of(Roles.COURT_ADMIN.getValue())).build());
@@ -4913,13 +4913,13 @@ public class ManageOrderServiceTest {
         List<Element<OrderDetails>> orderCollection = (List<Element<OrderDetails>>) response.get("orderCollection");
 
         assertEquals("Financial compensation order following C79 enforcement application (C82)",
-                     orderCollection.get(0).getValue().getOrderTypeId());
+                     orderCollection.getFirst().getValue().getOrderTypeId());
         assertNotNull(response);
 
     }
 
     @Test
-    public void testGenerateOrderDocumentFromDocmosis() throws Exception {
+    void testGenerateOrderDocumentFromDocmosis() throws Exception {
         ReflectionTestUtils.setField(manageOrderService, "sdoWelshDraftTemplate", "sdoWelshDraftTemplate");
         List<Element<HearingData>> hearingDataList = new ArrayList<>();
         HearingData hearingdata = HearingData.builder()
@@ -4991,7 +4991,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testIsOrderApprovedSolicitorCreated() {
+    void testIsOrderApprovedSolicitorCreated() {
 
         List<Element<HearingData>> hearingDataList = new ArrayList<>();
         HearingData hearingdata = HearingData.builder()
@@ -5014,7 +5014,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void setHearingSelectedInfoForTaskWithMultipleHearings() {
+    void setHearingSelectedInfoForTaskWithMultipleHearings() {
 
         List<Element<HearingData>> hearingDataList = new ArrayList<>();
         HearingData hearingdata1 = HearingData.builder()
@@ -5039,7 +5039,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void setHearingSelectedInfoForTaskWitNoHearings() {
+    void setHearingSelectedInfoForTaskWitNoHearings() {
 
         Map<String, Object> caseDataUpdated = new HashMap<>();
 
@@ -5053,7 +5053,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void setHearingSelectedInfoForTaskWitHearingsButNoHearingDateConfirmOptionEnum() {
+    void setHearingSelectedInfoForTaskWitHearingsButNoHearingDateConfirmOptionEnum() {
 
         List<Element<HearingData>> hearingDataList = new ArrayList<>();
         HearingData hearingdata1 = HearingData.builder()
@@ -5072,7 +5072,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void setHearingSelectedInfoForTaskWitMultipleHearingsButOnlyOneHearingDateConfirmOptionEnum() {
+    void setHearingSelectedInfoForTaskWitMultipleHearingsButOnlyOneHearingDateConfirmOptionEnum() {
 
         List<Element<HearingData>> hearingDataList = new ArrayList<>();
         HearingData hearingdata1 = HearingData.builder()
@@ -5107,7 +5107,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void setHearingSelectedInfoForTaskWitMultipleHearingsButMoreThnOneHearingDateConfirmOptionEnum() {
+    void setHearingSelectedInfoForTaskWitMultipleHearingsButMoreThnOneHearingDateConfirmOptionEnum() {
 
         List<Element<HearingData>> hearingDataList = new ArrayList<>();
         HearingData hearingdata1 = HearingData.builder()
@@ -5141,7 +5141,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHandlePreviewOrderScenario1() throws Exception {
+    void testHandlePreviewOrderScenario1() throws Exception {
         List<Element<PartyDetails>> partyDetails = new ArrayList<>();
         PartyDetails details = PartyDetails.builder()
             .solicitorOrg(Organisation.builder().organisationName("test Org").build())
@@ -5184,7 +5184,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHandlePreviewOrderScenario2() throws Exception {
+    void testHandlePreviewOrderScenario2() throws Exception {
         List<Element<PartyDetails>> partyDetails = new ArrayList<>();
         PartyDetails details = PartyDetails.builder()
             .solicitorOrg(Organisation.builder().organisationName("test Org").build())
@@ -5232,7 +5232,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHandlePreviewOrderScenario3() throws Exception {
+    void testHandlePreviewOrderScenario3() throws Exception {
         List<Element<PartyDetails>> partyDetails = new ArrayList<>();
         PartyDetails details = PartyDetails.builder()
             .solicitorOrg(Organisation.builder().organisationName("test Org").build())
@@ -5277,7 +5277,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testSetHearingDataForSdo() {
+    void testSetHearingDataForSdo() {
 
         UUID uuid = UUID.randomUUID();
         HearingDataFromTabToDocmosis hearingDataFromTabToDocmosis = HearingDataFromTabToDocmosis.builder().hearingType(
@@ -5332,13 +5332,13 @@ public class ManageOrderServiceTest {
             .thenReturn(hearingDataRevised);
 
         CaseData caseDataResp = manageOrderService.setHearingDataForSdo(caseData, hearings, "auth");
-        Assert.assertNull(caseData.getStandardDirectionOrder().getSdoDirectionsForFactFindingHearingDetails().getHearingdataFromHearingTab());
-        Assert.assertEquals(uuid, caseDataResp.getStandardDirectionOrder()
-            .getSdoDirectionsForFactFindingHearingDetails().getHearingdataFromHearingTab().get(0).getId());
+        assertNull(caseData.getStandardDirectionOrder().getSdoDirectionsForFactFindingHearingDetails().getHearingdataFromHearingTab());
+        assertEquals(uuid, caseDataResp.getStandardDirectionOrder()
+            .getSdoDirectionsForFactFindingHearingDetails().getHearingdataFromHearingTab().getFirst().getId());
     }
 
     @Test
-    public void testServeOrderC100WithAmendedParties() throws Exception {
+    void testServeOrderC100WithAmendedParties() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -5437,19 +5437,19 @@ public class ManageOrderServiceTest {
         when(dateTime.now()).thenReturn(LocalDateTime.now());
         List<Element<OrderDetails>> orderDetails = manageOrderService.serveOrder(caseData, orderList);
         assertNotNull(orderDetails);
-        assertNotNull(orderDetails.get(0));
-        assertNotNull(orderDetails.get(0).getValue().getServeOrderDetails());
-        assertNotNull(orderDetails.get(0).getValue().getServeOrderDetails().getServedParties());
-        assertNotNull(orderDetails.get(0).getValue().getServeOrderDetails().getServedParties().get(0));
+        assertNotNull(orderDetails.getFirst());
+        assertNotNull(orderDetails.getFirst().getValue().getServeOrderDetails());
+        assertNotNull(orderDetails.getFirst().getValue().getServeOrderDetails().getServedParties());
+        assertNotNull(orderDetails.getFirst().getValue().getServeOrderDetails().getServedParties().getFirst());
         assertEquals(
-            orderDetails.get(0).getValue().getServeOrderDetails().getServedParties().get(0).getValue()
+            orderDetails.getFirst().getValue().getServeOrderDetails().getServedParties().getFirst().getValue()
                 .getPartyId(),
-            (orders.getValue().getServeOrderDetails().getServedParties().get(0).getValue().getPartyId())
+            (orders.getValue().getServeOrderDetails().getServedParties().getFirst().getValue().getPartyId())
         );
     }
 
     @Test
-    public void testWaSetHearingOptionDetailsForTask_whenDoYouWantToEditOrderYesForSdo() {
+    void testWaSetHearingOptionDetailsForTask_whenDoYouWantToEditOrderYesForSdo() {
 
         List<Element<HearingData>> hearingDataList = new ArrayList<>();
         HearingData hearingdata = HearingData.builder()
@@ -5502,7 +5502,7 @@ public class ManageOrderServiceTest {
 
 
     @Test
-    public void testWaSetHearingOptionDetailsForTask_whenDoYouWantToEditOrderNoForSdo() {
+    void testWaSetHearingOptionDetailsForTask_whenDoYouWantToEditOrderNoForSdo() {
 
         List<Element<HearingData>> hearingDataList = new ArrayList<>();
         HearingData hearingdata = HearingData.builder()
@@ -5554,7 +5554,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testWaSetHearingOptionDetailsForTask_whenManagerOrdersJourneyForSdo() {
+    void testWaSetHearingOptionDetailsForTask_whenManagerOrdersJourneyForSdo() {
 
         List<Element<HearingData>> hearingDataList = new ArrayList<>();
         HearingData hearingdata = HearingData.builder()
@@ -5597,7 +5597,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testCreateAutomatedHearingManagementForOptionFour() throws Exception {
+    void testCreateAutomatedHearingManagementForOptionFour() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -5725,7 +5725,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testCreateAutomatedHearingManagementForOptionThree() throws Exception {
+    void testCreateAutomatedHearingManagementForOptionThree() throws Exception {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -5853,7 +5853,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testCreateAutomatedHearingManagementException() {
+    void testCreateAutomatedHearingManagementException() {
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
             .binaryUrl("binaryUrl")
@@ -5933,7 +5933,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testSetFieldsForRequestSafeGuardingReportWaTaskMoreThan7Days() {
+    void testSetFieldsForRequestSafeGuardingReportWaTaskMoreThan7Days() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -5957,7 +5957,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testSetFieldsForRequestSafeGuardingReportWaTaskLessThan7Days() {
+    void testSetFieldsForRequestSafeGuardingReportWaTaskLessThan7Days() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -5981,7 +5981,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testSetFieldsForRequestSafeGuardingReportWaTaskForManageOrder() {
+    void testSetFieldsForRequestSafeGuardingReportWaTaskForManageOrder() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -6004,7 +6004,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testSetFieldsForRequestSafeGuardingReportWaTaskForAdminEditAndApproveOrder() {
+    void testSetFieldsForRequestSafeGuardingReportWaTaskForAdminEditAndApproveOrder() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -6027,7 +6027,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetHearingData() {
+    void testGetHearingData() {
         when(hearingService.getHearings(Mockito.anyString(),Mockito.anyString())).thenReturn(Hearings.hearingsWith().build());
         when(hearingDataService.populateHearingDynamicLists(Mockito.anyString(),Mockito.anyString(),Mockito.any(),Mockito.any()))
             .thenReturn(HearingDataPrePopulatedDynamicLists.builder().build());
@@ -6040,7 +6040,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHandlePreviewOrderScenario4() throws Exception {
+    void testHandlePreviewOrderScenario4() throws Exception {
         List<Element<PartyDetails>> partyDetails = new ArrayList<>();
         PartyDetails details = PartyDetails.builder()
             .solicitorOrg(Organisation.builder().organisationName("test Org").build())
@@ -6085,7 +6085,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testPopulateFinalOrderFromCaseDataWithNoCheck1() throws Exception {
+    void testPopulateFinalOrderFromCaseDataWithNoCheck1() throws Exception {
 
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder().forename("test")
                                                                      .roles(List.of(Roles.COURT_ADMIN.getValue())).build());
@@ -6147,7 +6147,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHandleFetchOrderDetails1() {
+    void testHandleFetchOrderDetails1() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -6176,7 +6176,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHandleFetchOrderDetails2() {
+    void testHandleFetchOrderDetails2() {
         manageOrders = manageOrders.toBuilder()
             .c21OrderOptions(C21OrderOptionsEnum.c21other).build();
         CaseData caseData = CaseData.builder()
@@ -6207,7 +6207,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHandleFetchOrderDetails3() {
+    void testHandleFetchOrderDetails3() {
         CaseData caseData = CaseData.builder()
             .id(12345L)
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -6236,7 +6236,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testHandleFetchOrderDetails4() {
+    void testHandleFetchOrderDetails4() {
         CaseData caseData = CaseData.builder()
             .id(12345L)
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -6265,7 +6265,7 @@ public class ManageOrderServiceTest {
     }
 
     @Test
-    public void testGetCurrentUploadDraftOrderDetails() {
+    void testGetCurrentUploadDraftOrderDetails() {
         CaseData caseData = CaseData.builder()
             .id(12345L)
             .caseTypeOfApplication(C100_CASE_TYPE)
