@@ -52,7 +52,7 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.VIDEOPLATFORM;
 
 
 @ExtendWith(MockitoExtension.class)
-public class RefDataUserServiceTest {
+class RefDataUserServiceTest {
 
     public static final String FLAG_TYPE = "PARTY";
     @InjectMocks
@@ -96,7 +96,7 @@ public class RefDataUserServiceTest {
 
 
     @Test
-    public void testGetStaffDetailssWithNullStaffData() {
+    void testGetStaffDetailssWithNullStaffData() {
         when(staffResponseDetailsApi.getAllStaffResponseDetails(
             idamClient.getAccessToken(refDataIdamUsername,refDataIdamPassword),
             authTokenGenerator.generate(),
@@ -107,11 +107,11 @@ public class RefDataUserServiceTest {
             RD_STAFF_FIRST_PAGE
         )).thenReturn(null);
         List<DynamicListElement> staffDetails = refDataUserService.getLegalAdvisorList();
-        assertNull(staffDetails.get(0).getCode());
+        assertNull(staffDetails.getFirst().getCode());
     }
 
     @Test
-    public void testGetStaffDetailsWithException() {
+    void testGetStaffDetailsWithException() {
         when(staffResponseDetailsApi.getAllStaffResponseDetails(
             idamClient.getAccessToken(refDataIdamUsername,refDataIdamPassword),
             authTokenGenerator.generate(),
@@ -123,11 +123,11 @@ public class RefDataUserServiceTest {
         ))
             .thenThrow(FeignException.class);
         List<DynamicListElement> legalAdvisor = refDataUserService.getLegalAdvisorList();
-        assertNull(legalAdvisor.get(0).getCode());
+        assertNull(legalAdvisor.getFirst().getCode());
     }
 
     @Test
-    public void testGetStaffDetailsWithData() {
+    void testGetStaffDetailsWithData() {
 
         StaffProfile staffProfile1 = StaffProfile.builder().userType("Legal office").lastName("David").emailId(
             "test2@com").build();
@@ -154,13 +154,13 @@ public class RefDataUserServiceTest {
         )).thenReturn(staffResponse);
 
         List<DynamicListElement> legalAdvisorList = refDataUserService.getLegalAdvisorList();
-        assertNotNull(legalAdvisorList.get(0).getCode());
-        assertEquals("David(test2@com)",legalAdvisorList.get(0).getCode());
+        assertNotNull(legalAdvisorList.getFirst().getCode());
+        assertEquals("David(test2@com)",legalAdvisorList.getFirst().getCode());
 
     }
 
     @Test
-    public void testGetAllJudicialUsersForV2() {
+    void testGetAllJudicialUsersForV2() {
         when(idamClient.getAccessToken(refDataIdamUsername,refDataIdamPassword)).thenReturn(authToken);
         when(authTokenGenerator.generate()).thenReturn(s2sToken);
         JudicialUsersApiResponse judge1 = JudicialUsersApiResponse.builder().surname("lastName1").fullName("judge1@test.com").build();
@@ -177,11 +177,11 @@ public class RefDataUserServiceTest {
         )).thenReturn(listOfJudges);
         List<JudicialUsersApiResponse> expectedRespose = refDataUserService.getAllJudicialUserDetails(judicialUsersApiRequest);
         assertNotNull(expectedRespose);
-        assertEquals("lastName1",expectedRespose.get(0).getSurname());
+        assertEquals("lastName1",expectedRespose.getFirst().getSurname());
     }
 
     @Test
-    public void testGetAllJudicialUsersForV1() {
+    void testGetAllJudicialUsersForV1() {
         when(idamClient.getAccessToken(refDataIdamUsername,refDataIdamPassword)).thenReturn(authToken);
         when(authTokenGenerator.generate()).thenReturn(s2sToken);
         JudicialUsersApiResponse judge1 = JudicialUsersApiResponse.builder().surname("lastName1").fullName("judge1@test.com").build();
@@ -198,11 +198,11 @@ public class RefDataUserServiceTest {
         )).thenReturn(listOfJudges);
         List<JudicialUsersApiResponse> expectedRespose = refDataUserService.getAllJudicialUserDetails(judicialUsersApiRequest);
         assertNotNull(expectedRespose);
-        assertEquals("lastName1",expectedRespose.get(0).getSurname());
+        assertEquals("lastName1",expectedRespose.getFirst().getSurname());
     }
 
     @Test
-    public void testGetHearingTypeWithData() {
+    void testGetHearingTypeWithData() {
         when(authTokenGenerator.generate()).thenReturn(s2sToken);
 
         List<CategoryValues> listOfCategoryValues = new ArrayList<>();
@@ -222,11 +222,11 @@ public class RefDataUserServiceTest {
             IS_HEARINGCHILDREQUIRED_N
         );
         assertNotNull(commonResponse);
-        assertEquals("Celebration hearing",commonResponse.getCategoryValues().get(0).getValueEn());
+        assertEquals("Celebration hearing",commonResponse.getCategoryValues().getFirst().getValueEn());
     }
 
     @Test
-    public void testRetrieveCaseFlags() {
+    void testRetrieveCaseFlags() {
         FlagDetail flagDetail1 = FlagDetail.builder().flagCode("ABCD").externallyAvailable(true).flagComment(true).cateGoryId(0).build();
         FlagDetail flagDetail2 = FlagDetail.builder().flagCode("CDEF")
             .childFlags(List.of(flagDetail1)).externallyAvailable(false).flagComment(true).cateGoryId(0).build();
@@ -244,13 +244,13 @@ public class RefDataUserServiceTest {
             authToken,
             FLAG_TYPE
         );
-        assertEquals("ABCD",caseFlag.getFlags().get(0).getFlagDetails().get(0).getFlagCode());
+        assertEquals("ABCD",caseFlag.getFlags().getFirst().getFlagDetails().getFirst().getFlagCode());
 
     }
 
 
     @Test
-    public void testGetHearingTypeNullData() {
+    void testGetHearingTypeNullData() {
         when(authTokenGenerator.generate()).thenReturn(s2sToken);
 
         List<CategoryValues> listOfCategoryValues = new ArrayList<>();
@@ -269,7 +269,7 @@ public class RefDataUserServiceTest {
     }
 
     @Test
-    public void testGetHearingChannelWithData() {
+    void testGetHearingChannelWithData() {
 
         when(authTokenGenerator.generate()).thenReturn(s2sToken);
 
@@ -290,12 +290,12 @@ public class RefDataUserServiceTest {
             IS_HEARINGCHILDREQUIRED_N
         );
         assertNotNull(commonResponse);
-        assertEquals("ONPPRS",commonResponse.getCategoryValues().get(0).getKey());
-        assertEquals("On the Papers",commonResponse.getCategoryValues().get(0).getValueEn());
+        assertEquals("ONPPRS",commonResponse.getCategoryValues().getFirst().getKey());
+        assertEquals("On the Papers",commonResponse.getCategoryValues().getFirst().getValueEn());
     }
 
     @Test
-    public void testFilterCategoryValuesByCategoryId() {
+    void testFilterCategoryValuesByCategoryId() {
 
         List<CategoryValues> listOfCategoryValues = new ArrayList<>();
         CategoryValues categoryValues1 = CategoryValues.builder().categoryKey(HEARINGTYPE).key("ONPPRS").valueEn("On the Papers").build();
@@ -308,23 +308,23 @@ public class RefDataUserServiceTest {
         List<DynamicListElement> expectedResponse = refDataUserService.filterCategoryValuesByCategoryId(
             commonDataResponse,
             HEARINGTYPE);
-        assertEquals("AINTER",expectedResponse.get(0).getCode());
-        assertEquals("AIN Person",expectedResponse.get(0).getLabel());
+        assertEquals("AINTER",expectedResponse.getFirst().getCode());
+        assertEquals("AIN Person",expectedResponse.getFirst().getLabel());
 
     }
 
     @Test
-    public void testFilterCategoryValuesByNullResponse() {
+    void testFilterCategoryValuesByNullResponse() {
         List<DynamicListElement> expectedResponse = refDataUserService.filterCategoryValuesByCategoryId(
             null,
             HEARINGTYPE);
-        assertEquals(null,expectedResponse.get(0).getCode());
-        assertEquals(null,expectedResponse.get(0).getLabel());
+        assertEquals(null,expectedResponse.getFirst().getCode());
+        assertEquals(null,expectedResponse.getFirst().getLabel());
 
     }
 
     @Test
-    public void testFilterSubCategoryValuesByCategoryId() {
+    void testFilterSubCategoryValuesByCategoryId() {
         CategorySubValues value1 = CategorySubValues.builder().categoryKey("HearingSubChannel").key("VIDOTHER").valueEn("Video - Other").build();
         CategorySubValues value2 = CategorySubValues.builder().categoryKey("HearingSubChannel").key("VIDCVP").valueEn("Video - CVP").build();
         CategorySubValues value3 = CategorySubValues.builder().categoryKey("HearingSubChannel").key("VIDPVL").valueEn("Prison Video").build();
@@ -342,8 +342,8 @@ public class RefDataUserServiceTest {
         List<DynamicListElement> expectedResponse = refDataUserService.filterCategorySubValuesByCategoryId(
             commonDataResponse,
             VIDEOPLATFORM);
-        assertEquals("VIDPVL",expectedResponse.get(0).getCode());
-        assertEquals("Prison Video",expectedResponse.get(0).getLabel());
+        assertEquals("VIDPVL",expectedResponse.getFirst().getCode());
+        assertEquals("Prison Video",expectedResponse.getFirst().getLabel());
         assertEquals("VIDCVP",expectedResponse.get(1).getCode());
         assertEquals("Video - CVP",expectedResponse.get(1).getLabel());
         assertEquals("VIDOTHER",expectedResponse.get(2).getCode());
@@ -354,17 +354,17 @@ public class RefDataUserServiceTest {
     }
 
     @Test
-    public void testFilterCategorySubValuesByNullResponse() {
+    void testFilterCategorySubValuesByNullResponse() {
         List<DynamicListElement> expectedResponse = refDataUserService.filterCategorySubValuesByCategoryId(
             null,
             VIDEOPLATFORM);
-        assertEquals(null,expectedResponse.get(0).getCode());
-        assertEquals(null,expectedResponse.get(0).getLabel());
+        assertEquals(null,expectedResponse.getFirst().getCode());
+        assertEquals(null,expectedResponse.getFirst().getLabel());
 
     }
 
     @Test
-    public void testGetStaffDetailsDataSizeLtPageSize() {
+    void testGetStaffDetailsDataSizeLtPageSize() {
 
         StaffProfile staffProfile1 = StaffProfile.builder().userType(LEGALOFFICE)
             .lastName("David").emailId("test2@com").build();
@@ -390,13 +390,13 @@ public class RefDataUserServiceTest {
 
         List<DynamicListElement> legalAdvisorList = refDataUserService.getLegalAdvisorList();
 
-        assertNotNull(legalAdvisorList.get(0).getCode());
-        assertEquals("David(test2@com)",legalAdvisorList.get(0).getCode());
+        assertNotNull(legalAdvisorList.getFirst().getCode());
+        assertEquals("David(test2@com)",legalAdvisorList.getFirst().getCode());
         assertEquals(1, legalAdvisorList.size());
     }
 
     @Test
-    public void testGetStaffDetailsDataSizeGtPageSize() {
+    void testGetStaffDetailsDataSizeGtPageSize() {
 
         StaffProfile staffProfile1 = StaffProfile.builder().userType(LEGALOFFICE)
             .lastName("David").emailId("test2@com").build();
@@ -437,13 +437,13 @@ public class RefDataUserServiceTest {
 
         List<DynamicListElement> legalAdvisorList = refDataUserService.getLegalAdvisorList();
 
-        assertNotNull(legalAdvisorList.get(0).getCode());
-        assertEquals("David(test2@com)",legalAdvisorList.get(0).getCode());
+        assertNotNull(legalAdvisorList.getFirst().getCode());
+        assertEquals("David(test2@com)",legalAdvisorList.getFirst().getCode());
         assertEquals(1, legalAdvisorList.size());
     }
 
     @Test
-    public void testRetrieveCategoryValuesFeignException() {
+    void testRetrieveCategoryValuesFeignException() {
         when(authTokenGenerator.generate()).thenReturn(s2sToken);
         when(commonDataRefApi.getAllCategoryValuesByCategoryId(authToken,
                                                                authTokenGenerator.generate(),
